[brx] update from Pootle (firefox)

--- a/brx/browser/chrome/browser/devtools/markers.properties
+++ b/brx/browser/chrome/browser/devtools/markers.properties
@@ -17,7 +17,7 @@
 marker.label.paint=पेइन्ट
 marker.label.domevent=DOM जाथाय
 marker.label.consoleTime=कनस'ल
-marker.label.garbageCollection=बारायलांनाय GC
+marker.label.garbageCollection.incremental=बारायलांनाय GC
 marker.label.unknown=(मोनथिमोनै)
 
 # LOCALIZATION NOTE (marker.label.javascript.*):
