--- a/brx/browser/chrome/browser/tabbrowser.properties
+++ b/brx/browser/chrome/browser/tabbrowser.properties
@@ -30,6 +30,8 @@ tabs.closeWarningMultiple=;नोंथाङा #1 टेबखौ बन्द
 tabs.closeButtonMultiple=टेबफोरखौ बन्द खालाम
 tabs.closeWarningPromptMe=आं बायदि रोखोमनि टेबखौ बन्द खालामनो नाजानाय समाव आंखौ सांग्रां खालाम
 
+# LOCALIZATION NOTE (tabs.closeSelectedTab.tooltip):
+# %S is the keyboard shortcut for closing the current tab
 # LOCALIZATION NOTE (tabs.muteAudio.tooltip):
 # %S is the keyboard shortcut for "Mute tab"
 # LOCALIZATION NOTE (tabs.unmuteAudio.tooltip):
