--- a/brx/services/sync/sync.properties
+++ b/brx/services/sync/sync.properties
@@ -8,6 +8,9 @@ client.name2 = %3$S आव %1$S's %2$S
 # %S is the date and time at which the last sync successfully completed
 lastSync2.label = जोबथा सिन्क: %S
 
+# signInToSync.description is the tooltip for the Sync buttons when Sync is
+# not configured.
+
 mobile.label = मबाइल बुकमार्कफोर
 
 remote.pending.label = रिमट टेबफोरखौ सिन्क खालामनाय जागासिनो दं...
