--- a/brx/toolkit/chrome/global/devtools/styleinspector.properties
+++ b/brx/toolkit/chrome/global/devtools/styleinspector.properties
@@ -64,6 +64,10 @@ helpLinkTitle=बे आखुथायनि थाखाय डकुमेन
 # the title attribute of the warning icon.
 rule.warning.title=बाहायजायै आखुथाय बेसेन
 
+# LOCALIZATION NOTE (rule.filterProperty.title): Text displayed in the tooltip
+# of the search button that is shown next to a property that has been overridden
+# in the rule view.
+
 # LOCALIZATION NOTE (ruleView.empty): Text displayed when the highlighter is
 # first opened and there's no node selected in the rule view.
 rule.empty=जेबो गुदिमुवा सायख'वाखै।
