--- a/brx/browser/chrome/browser/accounts.properties
+++ b/brx/browser/chrome/browser/accounts.properties
@@ -17,6 +17,8 @@ signInAfterUpgradeOnOtherDevice.accessKey = S
 
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
 
+# LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+
 
 
 unlinkVerificationConfirm = आनलिंक खालाम
@@ -24,4 +26,5 @@ unlinkVerificationConfirm = आनलिंक खालाम
 # These strings are used in a dialog we display after the user requests we resend
 # a verification email.
 # LOCALIZATION NOTE (verificationSentHeading) - %S = Email address of user's Firefox Account
+# LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
 
