--- a/brx/browser/chrome/browser/devtools/debugger.properties
+++ b/brx/browser/chrome/browser/devtools/debugger.properties
@@ -45,11 +45,14 @@ collapsePanes=हरखाब बायनाय पेन
 # that expands the left and right panes in the debugger UI.
 expandPanes=फेहेरनाय पेन
 
-# LOCALIZATION NOTE (pauseLabel): The label that is displayed on the pause
+# LOCALIZATION NOTE (pauseButtonTooltip): The tooltip that is displayed for the pause
 # button when the debugger is in a running state.
 pauseButtonTooltip=(%S) खौ थाद'नो क्लिक खालाम
 
-# LOCALIZATION NOTE (resumeLabel): The label that is displayed on the pause
+# LOCALIZATION NOTE (pausePendingButtonTooltip): The tooltip that is displayed for
+# the pause button after it's been clicked but before the next JavaScript to run.
+
+# LOCALIZATION NOTE (resumeButtonTooltip): The label that is displayed on the pause
 # button when the debugger is in a paused state.
 resumeButtonTooltip=(%S) खौ फिन जागायनो क्लिक खालाम
 
