--- a/brx/browser/chrome/browser/devtools/performance.properties
+++ b/brx/browser/chrome/browser/devtools/performance.properties
@@ -86,11 +86,17 @@ category.graphics=ग्राफिक्स
 category.events=इनपुट जाथाय
 category.tools=टुल
 
-# LOCALIZATION NOTE (table.ms):
-# This string is displayed in the call tree after units of time in milliseconds.
+# LOCALIZATION NOTE (table.bytes):
+# This string is displayed in the call tree after bytesize units.
+# %S represents the value in bytes.
 
-# LOCALIZATION NOTE (table.percentage):
+# LOCALIZATION NOTE (table.ms2):
+# This string is displayed in the call tree after units of time in milliseconds.
+# %S represents the value in milliseconds.
+
+# LOCALIZATION NOTE (table.percentage2):
 # This string is displayed in the call tree after units representing percentages.
+# %S represents the value in percentage with two decimal points, localized.
 
 # LOCALIZATION NOTE (table.root):
 # This string is displayed in the call tree for the root node.
@@ -104,12 +110,7 @@ table.root=(रुट)
 # labels which, when clicked, jump to the debugger.
 table.url.tooltiptext=फुंखाखौ डेबागारआव नाय
 
-# LOCALIZATION NOTE (table.zoom.tooltiptext):
-# This string is displayed in the call tree as the tooltip text for the 'zoom'
-# buttons (small magnifying glass icons) which spawn a new tab.
-table.zoom.tooltiptext=प्रेमखौ गोदान टेबआव नायबिजिर
-
-# LOCALIZATION NOTE (table.view-optimizations.tooltiptext):
+# LOCALIZATION NOTE (table.view-optimizations.tooltiptext2):
 # This string is displayed in the icon displayed next to frames that
 # have optimization data
 
