--- a/brx/browser/chrome/browser/loop/loop.properties
+++ b/brx/browser/chrome/browser/loop/loop.properties
@@ -19,9 +19,9 @@ clientSuperShortname=ऐ
 ## LOCALIZATION_NOTE(sign_in_again_use_as_guest_button2): {{clientSuperShortname}}
 ## will be replaced by the super short brandname.
 
-## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
-## replaced by the brand name
 first_time_experience_button_label=जागायबाय
+## LOCALIZATION_NOTE(first_time_experience_subheading): Message inviting the
+## user to create his or her first conversation.
 
 invite_header_text=नोंथांजों लोगो लानो सोरखौबा खावलाय
 
@@ -71,25 +71,23 @@ settings_menu_button_tooltip=सेटिं
 
 ## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
 ## the search field.
-contacts_search_placesholder=नागिर...
+contacts_search_placesholder2=नागिर...
 
-## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## LOCALIZATION NOTE (new_contact_button2): This is the button to open the
 ## new contact sub-panel.
-new_contact_button=गोदान जगाजग
-## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
-## These are the placeholders for the fields for entering a new contact. Click
-## the 'New Contact' button to see the fields.
-new_contact_name_placeholder=मुं
-new_contact_email_placeholder=इ-मेइल
-new_contact_fxos_phone_placeholder=फायारफक्स OS फन
-new_contact_phone_placeholder2=फन
+## LOCALIZATION NOTE (contact_form_*_placeholder):
+## These are the placeholders for the inputs for entering or editing a contact
+## Click the 'New Contact' button to see the fields.
+contact_form_fxos_phone_placeholder=फायारफक्स OS फन
+contact_form_phone_placeholder2=फन
 
 contacts_blocked_contacts=ब्लक खालामखानाय जगाजग
 
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact. Click the 'New Contact'
 ## button to see the fields.
-add_contact_button=जगाजग दाजाबदेर
+## LOCALIZATION NOTE(add_contact_title): This is the subtitle of the add contact
+## panel. It is displayed when Add Contact is selected.
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
@@ -110,10 +108,16 @@ importing_contacts_progress_button=लाबो गासिनो दङ...
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=सिन्क जगाजग
-## LOCALIZATION NOTE(no_contacts_message_heading): Title shown when user has no
+## LOCALIZATION NOTE(no_contacts_message_heading2): Title shown when user has no
 ## contacts in his address book
-## LOCALIZATION NOTE(no_contacts_import_or_add): Subheading inviting the user
+## LOCALIZATION NOTE(no_contacts_import_or_add2): Subheading inviting the user
 ## to add people to his contact list
+## LOCALIZATION NOTE(no_conversations_message_heading2): Title shown when user
+## has no conversations available.
+## LOCALIZATION NOTE(no_conversations_start_message2): Subheading inviting the
+## user to start a new conversation.
+## LOCALIZATION NOTE(contacts_no_search_results): Message shown when contacts
+## search returned no matching results.
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -156,7 +160,6 @@ edit_contact_email_label=इ-मेइल
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
-edit_contact_done_button=जाखांबाइ
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
@@ -169,7 +172,6 @@ video_call_menu_button=भिडिअ' रायज्लायनाय
 ## LOCALIZATION NOTE(gravatars_promo_message): The {{learn_more}} part will be
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
 gravatars_promo_message_learnmore=गोबां सोलों
-gravatars_promo_button_nothanks=साबायखर होनाङा
 
 # Conversation Window Strings
 
@@ -185,8 +187,6 @@ hangup_button_title=हें आप
 hangup_button_caption2=ओंखार लां
 mute_local_audio_button_title=नोंथांनि अडिअ'खौ सोदोबगैयै खालाम
 unmute_local_audio_button_title=नोंथांनि अडिअ'खौ सोदोबगोनां खालाम
-mute_local_video_button_title=नोंथांनि भिडिअ'खौ सोदोबगैयै खालाम
-unmute_local_video_button_title=नोंथांनि भिडिअ'खौ सोदोबगोनां खालाम
 
 
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
@@ -217,7 +217,6 @@ restart_call=आरोबाव लोगो लादेर
 ## when a contact is unavailable. Don't translate the part between {{..}}
 ## because this will be replaced by the contact's name.
 
-generic_failure_title=माबा गोरोन्थि जादों।
 generic_failure_with_reason2=नोंथाङा फिन नाजानो हायो एबा उनाव सौहैनो गोनां लिंकखौ इ-मेइल खालामनो हायो।
 generic_failure_no_reason2=नोंथाङा फिन नाजानो लुबैयो नामा?
 
@@ -267,23 +266,16 @@ tour_label=घन्टा
 rooms_default_room_name_template=सावरायनाय {{conversationLabel}}
 rooms_leave_button_label=नागार
 rooms_list_copy_url_tooltip=लिंकखौ कपि खालाम
-## LOCALIZATION NOTE (rooms_list_current_conversations):
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## We prefer to have no number in the string, but if you need it for your
-## language please use {{num}}.
-rooms_list_current_conversations=दानि सावरायनाय;दानि सावरायनायफोर
+## LOCALIZATION NOTE (rooms_list_recent_conversations): String is in all caps
+## for emphasis reasons, it is a heading. Proceed as appropriate for locale.
 rooms_list_delete_tooltip=सावरायनायखौ खोमोर
 rooms_list_deleteConfirmation_label=नोंथाङा रोखा नामा?
-rooms_list_no_current_conversations=दानि जेबो रायज्लायनाय गैया
 rooms_new_room_button_label=रायज्लायनाय जागाय
-rooms_only_occupant_label=बेयाव नोंथाङानो गिबि
 rooms_panel_title=रायज्लायनाय बासिख एबा मोनसे गोदान रायज्लायनाय जागाय
 rooms_room_full_label=बे रायज्लायनायाव सिगाङावनो सानै सुबुं दं।
 rooms_room_full_call_to_action_nonFx_label=नोंथांनि निजि जागायनो {{brandShortname}} खौ डाउनल'ड खालाम
 rooms_room_full_call_to_action_label={{clientShortname}} » नि सोमोन्दै गोबां सोलों
 rooms_room_joined_label=सोरबा रायज्लायनायजों लोगो लादेरबाय!
-rooms_room_join_label=रायज्लायनायाव लोगो लादेर
 rooms_signout_alert=गेवनाय रायज्लायनाया बन्द जागोन
 
 # Infobar strings
@@ -292,15 +284,18 @@ infobar_button_gotit_label=बेखौ मोनबाय!
 
 # Context in conversation strings
 
-# LOCALIZATION NOTE (context_inroom_label): this string is followed by the
-# title/URL of the website you are having a conversation about, displayed on a
+# LOCALIZATION NOTE (context_inroom_header): this string is displayed in the
+# conversation window when the user edits context. It is a header to the edit
+# section.
+# LOCALIZATION NOTE (context_inroom_label2): this string is followed by the
+# title and domain of the website you are having a conversation about, displayed on a
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
-context_save_label2=थिना दोन
+
 
 # Text chat strings
 
