--- a/brx/dom/chrome/security/security.properties
+++ b/brx/dom/chrome/security/security.properties
@@ -8,7 +8,7 @@ BlockMixedActiveContent = गलाय-गथाय मावथि थाना
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security", "HSTS", "max-age" or "includeSubDomains"
 
-# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age" or "includeSubDomains"
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age", "report-uri" or "includeSubDomains"
 
 # LOCALIZATION NOTE: Do not translate "SHA-1"
 SHA1Sig=बे साइटआ SHA-1 सार्टिफिकेटखौ बाहायो; सहि एलग'रिडमजों सार्टिफिकेटखौ बाहायनो थिननाय जायो जाय SHA-1 निख्रुइ गोरासिन हेस खामानिखौ बाहायो।
@@ -19,5 +19,13 @@ InsecurePasswordsPresentOnIframe=पासवार्ड फोथारआ म
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=मोनसे iframe जायहा बेनि सेन्डबक्स एट्‌ट्रिबिउटनि थाखाय स्क्रिप्ट-गनायथि आरो एखे-गुबै-गनायथि दं जाय बेनि सेन्डबक्सिंखौ बोखारनो हायो।
 
-# LOCALIZATION NOTE: Do not translate "SSL 3.0".
+# Sub-Resource Integrity
+# LOCALIZATION NOTE: Do not translate "script" or "integrity". "%1$S" is the invalid token found in the attribute.
+# LOCALIZATION NOTE: Do not translate "integrity"
+# LOCALIZATION NOTE: Do not translate "integrity"
+# LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the type of hash algorigthm in use (e.g. "sha256").
+# LOCALIZATION NOTE: "%1$S" is the URI of the sub-resource that cannot be protected using SRI.
+# LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the invalid hash algorithm found in the attribute.
+# LOCALIZATION NOTE: Do not translate "integrity"
+
 # LOCALIZATION NOTE: Do not translate "RC4".
