--- a/brx/toolkit/chrome/global/devtools/gclicommands.properties
+++ b/brx/toolkit/chrome/global/devtools/gclicommands.properties
@@ -95,6 +95,14 @@ screenshotDelayDesc=गोबाव (सेकेन्द)
 # asks for help on what it does.
 screenshotDelayManual=स्क्रिनसटखौ लानायनि सिगां नेथ'नो सम (सेकेन्द)
 
+# LOCALIZATION NOTE (screenshotDPIDesc) A very short string to describe
+# the 'dpi' parameter to the 'screenshot' command, which is displayed in
+# a dialog when the user is using this command.
+
+# LOCALIZATION NOTE (screenshotDPIManual) A fuller description of the
+# 'dpi' parameter to the 'screenshot' command, displayed when the user
+# asks for help on what it does.
+
 # LOCALIZATION NOTE (screenshotFullscreenDesc) A very short string to describe
 # the 'fullscreen' parameter to the 'screenshot' command, which is displayed in
 # a dialog when the user is using this command.
@@ -1563,6 +1571,8 @@ folderOpenDirResult=%1$S खौ खेवबाय
 # LOCALIZATION NOTE (security)
 # CSP specific
 # LOCALIZATION NOTE: do not translate 'Content-Security-Policy'
+# Referrer Policy specific
+# LOCALIZATION NOTE: %1$S is the current page URI
 
 # LOCALIZATION NOTE (rulersDesc) A very short description of the
 # 'rulers' command. See rulersManual for a fuller description of what
