[bs] update from Pootle (firefox)

--- a/bs/browser/chrome/browser/accounts.properties
+++ b/bs/browser/chrome/browser/accounts.properties
@@ -27,6 +27,8 @@ resendVerificationEmail.accessKey = š
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
 reconnectDescription = Ponovo poveži %S
 
+# LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+
 forgetMigration.label = Zaboravi
 forgetMigration.accessKey = Z
 
@@ -43,6 +45,7 @@ verificationSentTitle = Verifikacija poslana
 # LOCALIZATION NOTE (verificationSentHeading) - %S = Email address of user's Firefox Account
 verificationSentHeading = Verifikacijski link je poslan na %S
 verificationSentDescription = Molimo da provjerite vaš email i da klikom na link započnete sa sinhronizacijom.
+# LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
 
 verificationNotSentTitle = Ne mogu poslati verifikaciju
 verificationNotSentHeading = Trenutno ne možemo poslati verifikaciju
