--- a/bs/browser/chrome/browser/devtools/markers.properties
+++ b/bs/browser/chrome/browser/devtools/markers.properties
@@ -22,7 +22,7 @@ marker.label.parseHTML=Parsiraj HTML
 marker.label.parseXML=Parsiraj XML
 marker.label.domevent=DOM događaj
 marker.label.consoleTime=Konzola
-marker.label.garbageCollection=Inkrementalni GC
+marker.label.garbageCollection.incremental=Inkrementalni GC
 marker.label.garbageCollection.nonIncremental=Ne-inkrementalni GC
 marker.label.cycleCollection=Kolekcija ciklusa
 marker.label.cycleCollection.forgetSkippable=CC graf redukcija
