--- a/bs/browser/chrome/browser/tabbrowser.properties
+++ b/bs/browser/chrome/browser/tabbrowser.properties
@@ -31,6 +31,8 @@ tabs.closeButtonMultiple=Zatvori tabove
 tabs.closeWarningPromptMe=Upozori me kada pokušam zatvoriti više tabova
 
 tabs.closeTab.tooltip=Zatvori tab
+# LOCALIZATION NOTE (tabs.closeSelectedTab.tooltip):
+# %S is the keyboard shortcut for closing the current tab
 # LOCALIZATION NOTE (tabs.muteAudio.tooltip):
 # %S is the keyboard shortcut for "Mute tab"
 tabs.muteAudio.tooltip=Ugasi zvuk taba (%S)
