--- a/bs/dom/chrome/security/security.properties
+++ b/bs/dom/chrome/security/security.properties
@@ -27,7 +27,7 @@ STSMultipleIncludeSubdomains=Strict-Transport-Security: Stranica je specificiral
 STSInvalidIncludeSubdomains=Strict-Transport-Security: Web stranica je specificirala zaglavlje koje uključuje neispravnu 'includeSubDomains' direktivu.
 STSCouldNotSaveState=Strict-Transport-Security: Desila se greška primjećujući stranicu kao Strict-Transport-Security host.
 
-# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age" or "includeSubDomains"
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age", "report-uri" or "includeSubDomains"
 PKPUnknownError=Public-Key-Pins: Desila se nepoznata greška pri procesiranju zaglavlja koji je specificirala stranica.
 PKPUntrustworthyConnection=Public-Key-Pins: Veza na stranicu nije povjerljiva, pa je specificirano zaglavlje ignorisano.
 PKPCouldNotParseHeader=Public-Key-Pins: Stranica je specificirala zaglavlje koje se ne može uspješno parsirati.
@@ -53,7 +53,14 @@ LoadingMixedDisplayContent2=Učitavanje mještovitog (nesigurnog) prikazanog sad
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=Iframe koji ima oba allow-scripts i allow-same-origin atributa za svoj sandbox može ukloniti svoj sandbox.
 
-# LOCALIZATION NOTE: Do not translate "SSL 3.0".
-WeakProtocolVersionWarning=Ova stranica za enkripciju koristi zastarjeli i nesigurni SSL 3.0 protokol.
+# Sub-Resource Integrity
+# LOCALIZATION NOTE: Do not translate "script" or "integrity". "%1$S" is the invalid token found in the attribute.
+# LOCALIZATION NOTE: Do not translate "integrity"
+# LOCALIZATION NOTE: Do not translate "integrity"
+# LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the type of hash algorigthm in use (e.g. "sha256").
+# LOCALIZATION NOTE: "%1$S" is the URI of the sub-resource that cannot be protected using SRI.
+# LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the invalid hash algorithm found in the attribute.
+# LOCALIZATION NOTE: Do not translate "integrity"
+
 # LOCALIZATION NOTE: Do not translate "RC4".
 WeakCipherSuiteWarning=Ova stranica za enkripciju korisni zastarjeli i nesigurni RC4 protokol.
