--- a/bs/toolkit/chrome/global/devtools/gclicommands.properties
+++ b/bs/toolkit/chrome/global/devtools/gclicommands.properties
@@ -96,6 +96,14 @@ screenshotDelayDesc=Pauza (sekundi)
 # asks for help on what it does.
 screenshotDelayManual=Vrijeme za čekanje (u sekundama) prije nego se načini screenshot
 
+# LOCALIZATION NOTE (screenshotDPIDesc) A very short string to describe
+# the 'dpi' parameter to the 'screenshot' command, which is displayed in
+# a dialog when the user is using this command.
+
+# LOCALIZATION NOTE (screenshotDPIManual) A fuller description of the
+# 'dpi' parameter to the 'screenshot' command, displayed when the user
+# asks for help on what it does.
+
 # LOCALIZATION NOTE (screenshotFullscreenDesc) A very short string to describe
 # the 'fullscreen' parameter to the 'screenshot' command, which is displayed in
 # a dialog when the user is using this command.
@@ -1574,7 +1582,6 @@ folderInvalidPath=Molimo da unesete ispravnu putanju
 folderOpenDirResult=Otvoren %1$S
 
 # LOCALIZATION NOTE (security)
-securityDesc=Prikaži podržane sigurnosne mogućnosti
 securityManual=Naredbe za prikaz i dobavljanje prijedloga o sigurnosnim mogućnostima za trenutnu domenu.
 securityListDesc=Prikaži sigurnosne mogućnosti
 securityListManual=Prikaži popis svih relevantnih sigurnosnih mogućnosti na trenutnoj stranici.
@@ -1587,6 +1594,8 @@ securityCSPPotentialXSS=Potencijalni XSS propust!
 securityCSPNoCSPOnPage=Nisam mogao pronaći Content-Security-Policy za
 securityCSPHeaderOnPage=Content-Security-Policy za
 securityCSPROHeaderOnPage=Content-Security-Policy-Report-Only za
+# Referrer Policy specific
+# LOCALIZATION NOTE: %1$S is the current page URI
 
 # LOCALIZATION NOTE (rulersDesc) A very short description of the
 # 'rulers' command. See rulersManual for a fuller description of what
