[dsb] update from Pootle (firefox)

--- a/dsb/browser/chrome/browser/devtools/markers.properties
+++ b/dsb/browser/chrome/browser/devtools/markers.properties
@@ -22,7 +22,7 @@ marker.label.parseHTML=HTML analyzěrowaś
 marker.label.parseXML=XML analyzěrowaś
 marker.label.domevent=DOM-tšojenje
 marker.label.consoleTime=Konsola
-marker.label.garbageCollection=Inkrementelny GC
+marker.label.garbageCollection.incremental=Inkrementelny GC
 marker.label.garbageCollection.nonIncremental=Njeinkrementelny GC
 marker.label.cycleCollection=Cycle Collection
 marker.label.cycleCollection.forgetSkippable=Reducěrowanje CC-grafa
