--- a/dsb/toolkit/chrome/global/devtools/gclicommands.properties
+++ b/dsb/toolkit/chrome/global/devtools/gclicommands.properties
@@ -96,6 +96,14 @@ screenshotDelayDesc=Wokomuźenje (sekundy)
 # asks for help on what it does.
 screenshotDelayManual=Cas, kótaryž se caka (w sekundach), nježli až se wobrazowka fotografěrujo
 
+# LOCALIZATION NOTE (screenshotDPIDesc) A very short string to describe
+# the 'dpi' parameter to the 'screenshot' command, which is displayed in
+# a dialog when the user is using this command.
+
+# LOCALIZATION NOTE (screenshotDPIManual) A fuller description of the
+# 'dpi' parameter to the 'screenshot' command, displayed when the user
+# asks for help on what it does.
+
 # LOCALIZATION NOTE (screenshotFullscreenDesc) A very short string to describe
 # the 'fullscreen' parameter to the 'screenshot' command, which is displayed in
 # a dialog when the user is using this command.
@@ -1574,7 +1582,6 @@ folderInvalidPath=Pšosym zapódajśo płaśiwu sćažku
 folderOpenDirResult=%1$S wócynjony
 
 # LOCALIZATION NOTE (security)
-securityDesc=Pódpěrane wěstotne funkcije zwobrazniś
 securityManual=Pśikaze za listowanje a wótwołowanje naraźenjow wó wěstotnych funkcijach za aktualnu domenu.
 securityListDesc=Wěstotne funkcije zwobrazniś
 securityListManual=Lisćinu wšych relewantnych wěstotnych funkcijow aktualnego boka zwobrazniś.
@@ -1587,6 +1594,8 @@ securityCSPPotentialXSS=Móžna XSS-zranjobnosć!
 securityCSPNoCSPOnPage=Content-Security-Policy njedajo se namakaś za
 securityCSPHeaderOnPage=Content-Security-Policy za
 securityCSPROHeaderOnPage=Głowowa smužka Content-Security-Policy-Only za
+# Referrer Policy specific
+# LOCALIZATION NOTE: %1$S is the current page URI
 
 # LOCALIZATION NOTE (rulersDesc) A very short description of the
 # 'rulers' command. See rulersManual for a fuller description of what
