--- a/dsb/browser/chrome/browser/accounts.properties
+++ b/dsb/browser/chrome/browser/accounts.properties
@@ -27,6 +27,8 @@ resendVerificationEmail.accessKey = Z
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
 reconnectDescription = Z %S znowego zwězaś
 
+# LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+
 forgetMigration.label = Zabyś
 forgetMigration.accessKey = b
 
@@ -43,6 +45,7 @@ verificationSentTitle = Pśeglědanje wótpósłane
 # LOCALIZATION NOTE (verificationSentHeading) - %S = Email address of user's Firefox Account
 verificationSentHeading = Pśeglědowański wótkaz jo se na %S pósłał
 verificationSentDescription = Pšosym skontrolěrujśo swóju e-mail a klikniśo na wótkaz, aby ze synchronizěrowanim zachopił.
+# LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
 
 verificationNotSentTitle = Wobkšuśenje njedajo se pósłaś
 verificationNotSentHeading = Njamóžomy tuchylu žednu wobkšuśeńsku mejlku pósłaś
