--- a/dsb/browser/chrome/browser/tabbrowser.properties
+++ b/dsb/browser/chrome/browser/tabbrowser.properties
@@ -31,6 +31,8 @@ tabs.closeButtonMultiple=Rejtarki zacyniś
 tabs.closeWarningPromptMe=Warnowaś, gaž se wopytujo, někotare rejtarki zacyniś
 
 tabs.closeTab.tooltip=Rejtarki zacyniś
+# LOCALIZATION NOTE (tabs.closeSelectedTab.tooltip):
+# %S is the keyboard shortcut for closing the current tab
 # LOCALIZATION NOTE (tabs.muteAudio.tooltip):
 # %S is the keyboard shortcut for "Mute tab"
 tabs.muteAudio.tooltip=Nimy rejtark (%S)
