--- a/dsb/services/sync/sync.properties
+++ b/dsb/services/sync/sync.properties
@@ -8,6 +8,9 @@ client.name2 = %2$S wužywarja %1$S na %3$S
 # %S is the date and time at which the last sync successfully completed
 lastSync2.label = Slědna synchronizacija: %S
 
+# signInToSync.description is the tooltip for the Sync buttons when Sync is
+# not configured.
+
 mobile.label = Mobilne cytańske znamjenja
 
 remote.pending.label = Daloke rejtarki se synchronizěruju…
