[ff] update from Pootle (firefox)

--- a/ff/browser/chrome/browser/accounts.properties
+++ b/ff/browser/chrome/browser/accounts.properties
@@ -26,6 +26,8 @@ resendVerificationEmail.accessKey = N
 
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
 
+# LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+
 forgetMigration.label = Yejjit
 forgetMigration.accessKey = Y
 
@@ -42,6 +44,7 @@ verificationSentTitle = Ƴeewtagol Neldaama
 # LOCALIZATION NOTE (verificationSentHeading) - %S = Email address of user's Firefox Account
 verificationSentHeading = Jokkol ƴeewtagol neldaama to %S
 verificationSentDescription = Tiiɗno ƴeewto wakannde meeluuji maa kisa dobo e jokkol ngam syncude.
+# LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
 
 verificationNotSentTitle = Horiima Neldu Ƴeewtagol
 verificationNotSentHeading = Min koriima neldude iimeel ƴeewtagol e oo sahaa
