--- a/ff/browser/chrome/browser/browser.properties
+++ b/ff/browser/chrome/browser/browser.properties
@@ -437,9 +437,6 @@ webapps.doNotUninstall = Hoto Aaftu
 webapps.doNotUninstall.accesskey = H
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
 
-# LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
-fullscreen.entered=%S ena jooni e njaajeendi yaynirde.
-
 # LOCALIZATION NOTE (fullscreenButton.tooltip): %S is the keyboard shortcut for full screen
 fullscreenButton.tooltip=Jaytin henorde ndee e njaajeendi yaynirde (%S)
 
@@ -507,6 +504,9 @@ getUserMedia.noScreen.label = Alaa Yaynirde
 getUserMedia.noWindow.label = Alaa Henorde
 getUserMedia.noAudio.label = Alaa Ojoo
 getUserMedia.shareEntireScreen.label = Yaynirde huuɓnde
+# LOCALIZATION NOTE (getUserMedia.shareMonitor.label):
+# %S is screen number (digits 1, 2, etc)
+# Example: Screen 1, Screen 2,..
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -657,3 +657,4 @@ appmenu.downloadUpdateButton.label = Aawto Kesɗitinal
 # %S is brandShortName
 e10s.offerPopup.noThanks.label = Alaa, mi yaafiima
 e10s.offerPopup.noThanks.accesskey = A
+
