--- a/ff/browser/chrome/browser/loop/loop.properties
+++ b/ff/browser/chrome/browser/loop/loop.properties
@@ -19,9 +19,9 @@ clientSuperShortname=Hello
 ## LOCALIZATION_NOTE(sign_in_again_use_as_guest_button2): {{clientSuperShortname}}
 ## will be replaced by the super short brandname.
 
-## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
-## replaced by the brand name
 first_time_experience_button_label=Fuɗɗo Ɗoo
+## LOCALIZATION_NOTE(first_time_experience_subheading): Message inviting the
+## user to create his or her first conversation.
 
 invite_header_text=Bismo neɗɗo yanta e maa.
 
@@ -71,25 +71,23 @@ settings_menu_button_tooltip=Teelte
 
 ## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
 ## the search field.
-contacts_search_placesholder=Yiylo…
+contacts_search_placesholder2=Yiylo…
 
-## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## LOCALIZATION NOTE (new_contact_button2): This is the button to open the
 ## new contact sub-panel.
-new_contact_button=Jokkondiral kesal
-## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
-## These are the placeholders for the fields for entering a new contact. Click
-## the 'New Contact' button to see the fields.
-new_contact_name_placeholder=Innde
-new_contact_email_placeholder=Iimeel
-new_contact_fxos_phone_placeholder=Cinnde Firefox OS
-new_contact_phone_placeholder2=Cinndel
+## LOCALIZATION NOTE (contact_form_*_placeholder):
+## These are the placeholders for the inputs for entering or editing a contact
+## Click the 'New Contact' button to see the fields.
+contact_form_fxos_phone_placeholder=Cinnde Firefox OS
+contact_form_phone_placeholder2=Cinndel
 
 contacts_blocked_contacts=Jokkondire Daaƴaaɗe
 
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact. Click the 'New Contact'
 ## button to see the fields.
-add_contact_button=Ɓeydu Cokkondiral
+## LOCALIZATION NOTE(add_contact_title): This is the subtitle of the add contact
+## panel. It is displayed when Add Contact is selected.
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
@@ -110,10 +108,16 @@ importing_contacts_progress_button=Nana jiggoo…
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=Sync Jokkondire
-## LOCALIZATION NOTE(no_contacts_message_heading): Title shown when user has no
+## LOCALIZATION NOTE(no_contacts_message_heading2): Title shown when user has no
 ## contacts in his address book
-## LOCALIZATION NOTE(no_contacts_import_or_add): Subheading inviting the user
+## LOCALIZATION NOTE(no_contacts_import_or_add2): Subheading inviting the user
 ## to add people to his contact list
+## LOCALIZATION NOTE(no_conversations_message_heading2): Title shown when user
+## has no conversations available.
+## LOCALIZATION NOTE(no_conversations_start_message2): Subheading inviting the
+## user to start a new conversation.
+## LOCALIZATION NOTE(contacts_no_search_results): Message shown when contacts
+## search returned no matching results.
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -156,7 +160,6 @@ edit_contact_email_label=Email
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
-edit_contact_done_button=Gasii
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
@@ -169,7 +172,6 @@ video_call_menu_button=Yeewtere Widewoo
 ## LOCALIZATION NOTE(gravatars_promo_message): The {{learn_more}} part will be
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
 gravatars_promo_message_learnmore=Ɓeydu humpito
-gravatars_promo_button_nothanks=Alaa, mi yaafiima
 
 # Conversation Window Strings
 
@@ -185,8 +187,6 @@ hangup_button_title=Korsu
 hangup_button_caption2=Yaltu
 mute_local_audio_button_title=Muumɗin ojoo maa
 unmute_local_audio_button_title=Muumɗitin ojoo maa
-mute_local_video_button_title=Muumɗin widewoo maa
-unmute_local_video_button_title=Muumɗitin widewoo maa
 
 
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
@@ -219,7 +219,6 @@ restart_call=Naattu
 contact_unavailable_title={{contactName}} heɓotaako.
 generic_contact_unavailable_title=Oo-ɗoo heɓotaako.
 
-generic_failure_title=Won caɗe mbaɗi.
 generic_failure_with_reason2=Aɗa waawi fuɗɗitaade walla neldaa jokkol ngam noddeede goɗngol.
 generic_failure_no_reason2=Aɗa yiɗi fuɗɗaade kadi?
 
@@ -269,23 +268,16 @@ tour_label=Yillo
 rooms_default_room_name_template=Yeewtere {{conversationLabel}}
 rooms_leave_button_label=Yaltu
 rooms_list_copy_url_tooltip=Natto Jokkol
-## LOCALIZATION NOTE (rooms_list_current_conversations):
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## We prefer to have no number in the string, but if you need it for your
-## language please use {{num}}.
-rooms_list_current_conversations=Yeewtere wonaande;Jeewte gonaaɗe
+## LOCALIZATION NOTE (rooms_list_recent_conversations): String is in all caps
+## for emphasis reasons, it is a heading. Proceed as appropriate for locale.
 rooms_list_delete_tooltip=Momtu yeewtere
 rooms_list_deleteConfirmation_label=Aɗa yenanaa?
-rooms_list_no_current_conversations=Alaa jeewte oo sahaa
 rooms_new_room_button_label=Fuɗɗo yeewtere
-rooms_only_occupant_label=Ko aan adii ɗoo.
 rooms_panel_title=Suɓo yeewtere walla fuɗɗi hesere
 rooms_room_full_label=Yimɓe ɗiɗo nana e yeewtere ndee kisa.
 rooms_room_full_call_to_action_nonFx_label=Aawto {{brandShortname}} ngam fuɗɗaade nde maa
 rooms_room_full_call_to_action_label=Ɓeydu humpito baɗte {{clientShortname}} »
 rooms_room_joined_label=Won naatɗo e yeewtere ndee!
-rooms_room_join_label=Yantu e yeewtere ndee
 rooms_signout_alert=Jeewte udditaaɗe ɗee maa uddo
 
 # Infobar strings
@@ -294,15 +286,18 @@ infobar_button_gotit_label=Mi faamii!
 
 # Context in conversation strings
 
-# LOCALIZATION NOTE (context_inroom_label): this string is followed by the
-# title/URL of the website you are having a conversation about, displayed on a
+# LOCALIZATION NOTE (context_inroom_header): this string is displayed in the
+# conversation window when the user edits context. It is a header to the edit
+# section.
+# LOCALIZATION NOTE (context_inroom_label2): this string is followed by the
+# title and domain of the website you are having a conversation about, displayed on a
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
-context_save_label2=Danndu
+
 
 # Text chat strings
 
