--- a/ff/browser/chrome/browser/tabbrowser.properties
+++ b/ff/browser/chrome/browser/tabbrowser.properties
@@ -30,6 +30,8 @@ tabs.closeWarningMultiple=;Ngonɗaa ko e uddude tabbe #1. Aɗa laaɓaa yiɗde ud
 tabs.closeButtonMultiple=Uddu tabbe
 tabs.closeWarningPromptMe=Reentin am so mi etiima uddude tabbe keewɗe
 
+# LOCALIZATION NOTE (tabs.closeSelectedTab.tooltip):
+# %S is the keyboard shortcut for closing the current tab
 # LOCALIZATION NOTE (tabs.muteAudio.tooltip):
 # %S is the keyboard shortcut for "Mute tab"
 # LOCALIZATION NOTE (tabs.unmuteAudio.tooltip):
