--- a/ff/dom/chrome/dom/dom.properties
+++ b/ff/dom/chrome/dom/dom.properties
@@ -155,7 +155,7 @@ ImportXULIntoContentWarning=Jiggaade noodde XUL e loowdi fiilannde koko woppaa. 
 XMLDocumentLoadPrincipalMismatch=Huutoraade document.load ena haɗaa e Documents garooji e keɗorɗe goɗɗe. So wonaa henorɗe ɗo fiilannde ndee sosaa ndee yamiraa yoo noddu .load e ndeen Fiilannde. Ko XMLHttpRequest foti huutoreede kisa so dañaama.
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=Won cooɗtondiral IndexedDB ngal timminaaka dartinaa sabu banngagol nello.
-# LOCALIZATION NOTE: Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
+# LOCALIZATION NOTE: Do not translate Will-change, %1$S,%2$S are numbers.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker".
 # LOCALIZATION NOTE: Do no translate "setVelocity", "PannerNode", "AudioListener", "speedOfSound" and "dopplerFactor"
 # LOCALIZATION NOTE: Do not translate "Worker".
@@ -164,4 +164,6 @@ IndexedDBTransactionAbortNavigation=Won cooɗtondiral IndexedDB ngal timminaaka 
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "FetchEvent.respondWith()", "FetchEvent.request.type", "same-origin", "cors", "no-cors", "opaque", "Response", or "RequestMode".
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "Error", "Response", "FetchEvent.respondWith()", or "fetch()".
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "Response", "FetchEvent.respondWith()", or "Response.clone()".
-# LOCALIZATION NOTE: Do not translate "ServiceWorker", "Response", "FetchEvent.respondWith()", "FetchEvent.request", or "Worker".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker", "opaque", "Response", "FetchEvent.respondWith()", "FetchEvent.request", or "Worker".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker", "opaqueredirect", "Response", "FetchEvent.respondWith()", or "FetchEvent.request".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker" or "FetchEvent.preventDefault()".
