--- a/ff/dom/chrome/security/security.properties
+++ b/ff/dom/chrome/security/security.properties
@@ -8,7 +8,7 @@ BlockMixedActiveContent = Faliima loowdi caasndi njillundi loowotoondi e "%1$S"
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security", "HSTS", "max-age" or "includeSubDomains"
 
-# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age" or "includeSubDomains"
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age", "report-uri" or "includeSubDomains"
 
 # LOCALIZATION NOTE: Do not translate "SHA-1"
 SHA1Sig=Ndee lowre huutortoo ko Seedamfaagu SHA-1; ena wasiyaa yo a huutoro seedamfaaje baɗɗe siifannde algoriritmol huutortoongu coppol ɓurngol SHA-1.
@@ -21,7 +21,14 @@ LoadingMixedDisplayContent2=Nana loowa loowdi jaytinol jilɓundi (ndi hisaani) e
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=Won iframe jogiiɗo allow-scripts e allow-same-origin e seenorde gonal mum ena waawi momtude seenagol mum.
 
-# LOCALIZATION NOTE: Do not translate "SSL 3.0".
-WeakProtocolVersionWarning=Ndee lowre huutortoo ko jaɓɓitorde SSL 3.0 ngam gannude, kono ɗuum koko woppaa te hisaani.
+# Sub-Resource Integrity
+# LOCALIZATION NOTE: Do not translate "script" or "integrity". "%1$S" is the invalid token found in the attribute.
+# LOCALIZATION NOTE: Do not translate "integrity"
+# LOCALIZATION NOTE: Do not translate "integrity"
+# LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the type of hash algorigthm in use (e.g. "sha256").
+# LOCALIZATION NOTE: "%1$S" is the URI of the sub-resource that cannot be protected using SRI.
+# LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the invalid hash algorithm found in the attribute.
+# LOCALIZATION NOTE: Do not translate "integrity"
+
 # LOCALIZATION NOTE: Do not translate "RC4".
 WeakCipherSuiteWarning=Ndee lowre huutortoo ko cipher RC4 ngam gannude, kono ɗuum koko woppaa te hisaani.
