--- a/ff/toolkit/chrome/global/devtools/styleinspector.properties
+++ b/ff/toolkit/chrome/global/devtools/styleinspector.properties
@@ -62,6 +62,10 @@ helpLinkTitle=Tar tinndinoore ndee-ɗoo heerrannde
 # the title attribute of the warning icon.
 rule.warning.title=Najru keeriɗo ñolɗo (maayɗo).
 
+# LOCALIZATION NOTE (rule.filterProperty.title): Text displayed in the tooltip
+# of the search button that is shown next to a property that has been overridden
+# in the rule view.
+
 # LOCALIZATION NOTE (ruleView.empty): Text displayed when the highlighter is
 # first opened and there's no node selected in the rule view.
 rule.empty=Hay geɗel gootel suɓaaka.
