[hsb] update from Pootle (firefox)

--- a/hsb/browser/chrome/browser/browser.properties
+++ b/hsb/browser/chrome/browser/browser.properties
@@ -501,9 +501,6 @@ webapps.doNotUninstall.accesskey = N
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
 webapps.requestUninstall = Chceće “%1$S” wotinstalować?
 
-# LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
-fullscreen.entered=%S je nětko w połnej wobrazowce.
-
 # LOCALIZATION NOTE (fullscreenButton.tooltip): %S is the keyboard shortcut for full screen
 fullscreenButton.tooltip=Wokno na połnej wobrazowce zwobraznić (%S)
 
@@ -574,6 +571,9 @@ getUserMedia.noScreen.label = Žana wobrazowka
 getUserMedia.noWindow.label = Žane wokno
 getUserMedia.noAudio.label = Žadyn zynk
 getUserMedia.shareEntireScreen.label = Cyła wobrazowka
+# LOCALIZATION NOTE (getUserMedia.shareMonitor.label):
+# %S is screen number (digits 1, 2, etc)
+# Example: Screen 1, Screen 2,..
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -774,3 +774,4 @@ e10s.accessibilityNotice.disableAndRestart.label = Znjemóžnić a znowa startow
 e10s.accessibilityNotice.disableAndRestart.accesskey = Z
 e10s.accessibilityNotice.dontDisable.label = Njeznjemóžnić
 e10s.accessibilityNotice.dontDisable.accesskey = N
+
