--- a/hsb/browser/chrome/browser/devtools/markers.properties
+++ b/hsb/browser/chrome/browser/devtools/markers.properties
@@ -22,7 +22,7 @@ marker.label.parseHTML=HTML analyzować
 marker.label.parseXML=XML analyzować
 marker.label.domevent=DOM-podawk
 marker.label.consoleTime=Konsola
-marker.label.garbageCollection=Inkrementelny GC
+marker.label.garbageCollection.incremental=Inkrementelny GC
 marker.label.garbageCollection.nonIncremental=Njeinkrementelny GC
 marker.label.cycleCollection=Zběrku přeběžeć
 marker.label.cycleCollection.forgetSkippable=Redukowanje CC-grafa
