--- a/hsb/dom/chrome/security/security.properties
+++ b/hsb/dom/chrome/security/security.properties
@@ -27,7 +27,7 @@ STSMultipleIncludeSubdomains=Strict-Transport: Sydło je hłowowu linku podało,
 STSInvalidIncludeSubdomains=Strict-Transport-Security: Sydło je hłowowu linku podało, kotrež njepłaćiwu směrnicu 'includeSubDomains' wobsahuje.
 STSCouldNotSaveState=Strict-Transport-Security: Zmylk je při registrowanju tutoho sydła jako host Strict-Transport-Security wustupił.
 
-# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age" or "includeSubDomains"
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age", "report-uri" or "includeSubDomains"
 PKPUnknownError=Public-Key-Pins: Při předźěłowanju hłowoweje linki, kotraž je so wot sydła podała, je njeznaty zmylk wustupił.
 PKPUntrustworthyConnection=Public-Key-Pins: Zwisk ze sydłom je dowěry njehódny, tohodla je so podata hłowowa linka ignorowała.
 PKPCouldNotParseHeader=Public-Key-Pins: Sydło je hłowowu linku podało, kotraž njeda so wuspěšnje analyzować.
@@ -53,7 +53,14 @@ LoadingMixedDisplayContent2=Měšany (njewěsty) zwobraznjenski wobsah "%1$S" so
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=Iframe, kotryž ma allow-scripts kaž tež allow-same-origin za swój atribut sandbox, móže wužiwanje w pěškowym kašćiku wotstronić.
 
-# LOCALIZATION NOTE: Do not translate "SSL 3.0".
-WeakProtocolVersionWarning=Tute sydło wužiwa protokol SSL 3.0 za zaklučowanje, kotryž je zestarjeny a njewěsty.
+# Sub-Resource Integrity
+# LOCALIZATION NOTE: Do not translate "script" or "integrity". "%1$S" is the invalid token found in the attribute.
+# LOCALIZATION NOTE: Do not translate "integrity"
+# LOCALIZATION NOTE: Do not translate "integrity"
+# LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the type of hash algorigthm in use (e.g. "sha256").
+# LOCALIZATION NOTE: "%1$S" is the URI of the sub-resource that cannot be protected using SRI.
+# LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the invalid hash algorithm found in the attribute.
+# LOCALIZATION NOTE: Do not translate "integrity"
+
 # LOCALIZATION NOTE: Do not translate "RC4".
 WeakCipherSuiteWarning=Tute sydło wužiwa šifru RC4 za zaklučowanje, kotraž je zestarjena a njewěsta.
