--- a/hsb/toolkit/chrome/global/devtools/gclicommands.properties
+++ b/hsb/toolkit/chrome/global/devtools/gclicommands.properties
@@ -96,6 +96,14 @@ screenshotDelayDesc=Komdźenje (sekundy)
 # asks for help on what it does.
 screenshotDelayManual=Čas, kotryž so čaka (w sekundach), prjedy hač so wobrazowka sfotuje
 
+# LOCALIZATION NOTE (screenshotDPIDesc) A very short string to describe
+# the 'dpi' parameter to the 'screenshot' command, which is displayed in
+# a dialog when the user is using this command.
+
+# LOCALIZATION NOTE (screenshotDPIManual) A fuller description of the
+# 'dpi' parameter to the 'screenshot' command, displayed when the user
+# asks for help on what it does.
+
 # LOCALIZATION NOTE (screenshotFullscreenDesc) A very short string to describe
 # the 'fullscreen' parameter to the 'screenshot' command, which is displayed in
 # a dialog when the user is using this command.
@@ -1574,7 +1582,6 @@ folderInvalidPath=Prošu zapodajće płaćiwu šćežku
 folderOpenDirResult=%1$S wočinjeny
 
 # LOCALIZATION NOTE (security)
-securityDesc=Podpěrane wěstotne funkcije zwobraznić
 securityManual=Přikazy za listowanje a wotwołowanje namjetow wo wěstotnych funkcijach za aktualnu domenu.
 securityListDesc=Wěstotne funkcije zwobraznić
 securityListManual=Lisćinu wšěch relewantnych wěstotnych funkcijow aktualneje strony zwobraznić.
@@ -1587,6 +1594,8 @@ securityCSPPotentialXSS=Móžna XSS-zranitosć!
 securityCSPNoCSPOnPage=Content-Security-Policy njeda so namakać za
 securityCSPHeaderOnPage=Content-Security-Policy za
 securityCSPROHeaderOnPage=Hłowowa linka Content-Security-Polciy-Report-Only za
+# Referrer Policy specific
+# LOCALIZATION NOTE: %1$S is the current page URI
 
 # LOCALIZATION NOTE (rulersDesc) A very short description of the
 # 'rulers' command. See rulersManual for a fuller description of what
