--- a/hsb/browser/chrome/browser/accounts.properties
+++ b/hsb/browser/chrome/browser/accounts.properties
@@ -27,6 +27,8 @@ resendVerificationEmail.accessKey = Z
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
 reconnectDescription = Z %S znowa zwjazać
 
+# LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+
 forgetMigration.label = Zabyć
 forgetMigration.accessKey = b
 
@@ -43,6 +45,7 @@ verificationSentTitle = Přepruwowanje wotpósłane
 # LOCALIZATION NOTE (verificationSentHeading) - %S = Email address of user's Firefox Account
 verificationSentHeading = Přepruwowanski wotkaz je so do %S pósłał
 verificationSentDescription = Prošu skontrolujće swoju e-mejl a klikńće na wotkaz, zo byšće ze synchronizowanjom započał.
+# LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
 
 verificationNotSentTitle = Wobkrućenje njeda so pósłać
 verificationNotSentHeading = Njemóžemy tuchwilu žanu wobkrućensku e-mejlku pósłać
