--- a/hsb/browser/chrome/browser/loop/loop.properties
+++ b/hsb/browser/chrome/browser/loop/loop.properties
@@ -25,10 +25,9 @@ sign_in_again_button=Přizjewić
 ## will be replaced by the super short brandname.
 sign_in_again_use_as_guest_button2={{clientSuperShortname}} jako hósć wužiwać
 
-## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
-## replaced by the brand name
-first_time_experience_title={{clientShortname}} — Rozmołwje so přidružić
 first_time_experience_button_label=Prěnje kroki
+## LOCALIZATION_NOTE(first_time_experience_subheading): Message inviting the
+## user to create his or her first conversation.
 
 invite_header_text=Přeprošće někoho, so wam přidružić.
 
@@ -86,25 +85,23 @@ settings_menu_button_tooltip=Nastajenja
 
 ## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
 ## the search field.
-contacts_search_placesholder=Pytać…
+contacts_search_placesholder2=Pytać…
 
-## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## LOCALIZATION NOTE (new_contact_button2): This is the button to open the
 ## new contact sub-panel.
-new_contact_button=Nowy kontakt
-## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
-## These are the placeholders for the fields for entering a new contact. Click
-## the 'New Contact' button to see the fields.
-new_contact_name_placeholder=Mjeno
-new_contact_email_placeholder=E-mejl
-new_contact_fxos_phone_placeholder=Telefon Firefox OS
-new_contact_phone_placeholder2=Telefon
+## LOCALIZATION NOTE (contact_form_*_placeholder):
+## These are the placeholders for the inputs for entering or editing a contact
+## Click the 'New Contact' button to see the fields.
+contact_form_fxos_phone_placeholder=Telefon Firefox OS
+contact_form_phone_placeholder2=Telefon
 
 contacts_blocked_contacts=Zablokowane kontakty
 
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact. Click the 'New Contact'
 ## button to see the fields.
-add_contact_button=Kontakt přidać
+## LOCALIZATION NOTE(add_contact_title): This is the subtitle of the add contact
+## panel. It is displayed when Add Contact is selected.
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
@@ -128,12 +125,16 @@ import_contacts_success_message={{total}} kontakt je so wuspěšnje importował.
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=Kontakty synchronizować
-## LOCALIZATION NOTE(no_contacts_message_heading): Title shown when user has no
+## LOCALIZATION NOTE(no_contacts_message_heading2): Title shown when user has no
 ## contacts in his address book
-no_contacts_message_heading=Hišće žane kontakty
-## LOCALIZATION NOTE(no_contacts_import_or_add): Subheading inviting the user
+## LOCALIZATION NOTE(no_contacts_import_or_add2): Subheading inviting the user
 ## to add people to his contact list
-no_contacts_import_or_add=Importujće abo přidajće někoho
+## LOCALIZATION NOTE(no_conversations_message_heading2): Title shown when user
+## has no conversations available.
+## LOCALIZATION NOTE(no_conversations_start_message2): Subheading inviting the
+## user to start a new conversation.
+## LOCALIZATION NOTE(contacts_no_search_results): Message shown when contacts
+## search returned no matching results.
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -180,7 +181,6 @@ edit_contact_email_label=E-mejl
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
-edit_contact_done_button=Dokónčeny
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
@@ -194,8 +194,6 @@ video_call_menu_button=Widejorozmołwa
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
 gravatars_promo_message=Móžeće wašim kontaktam awtomatisce profilowe symbole přidać, dźělo jich e-mejlowe adresy z Gravatar. {{learn_more}}.
 gravatars_promo_message_learnmore=Dalše informacije
-gravatars_promo_button_nothanks=Ně, dźakuju so
-gravatars_promo_button_use=Profilowe symbole wužiwać
 
 # Conversation Window Strings
 
@@ -211,8 +209,6 @@ hangup_button_title=Połožić
 hangup_button_caption2=Skónčić
 mute_local_audio_button_title=Waš zynk wupinyć
 unmute_local_audio_button_title=Waš zynk zapinyć
-mute_local_video_button_title=Waše widejo wupinyć
-unmute_local_video_button_title=Waše widejo zapinyć
 active_screenshare_button_title=Hižo njedźělić
 inactive_screenshare_button_title=Wašu wobrazowku dźělić
 share_tabs_button_title2=Waše rajtarki dźělić
@@ -250,7 +246,6 @@ restart_call=Zaso so přidružić
 contact_unavailable_title={{contactName}} k dispoziciji njeje.
 generic_contact_unavailable_title=Tuta wosoba k dispoziciji njeje.
 
-generic_failure_title=Něšto je so nimokuliło.
 generic_failure_with_reason2=Móžeće hišće raz spytać abo wotkaz e-mejlować, hdy sće pozdźišo k rěčam.
 generic_failure_no_reason2=Chceće hišće raz spytać?
 
@@ -303,24 +298,17 @@ tour_label=Tura
 rooms_default_room_name_template=Rozmołwa {{conversationLabel}}
 rooms_leave_button_label=Wopušćić
 rooms_list_copy_url_tooltip=Wotkaz kopěrować
-## LOCALIZATION NOTE (rooms_list_current_conversations):
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## We prefer to have no number in the string, but if you need it for your
-## language please use {{num}}.
-rooms_list_current_conversations=Aktualna rozmołwa;Aktualnej rozmołwje;Aktaulne rozmołwy;Aktualne rozmołwy
+## LOCALIZATION NOTE (rooms_list_recent_conversations): String is in all caps
+## for emphasis reasons, it is a heading. Proceed as appropriate for locale.
 rooms_list_delete_tooltip=Rozmołwu zhašeć
 rooms_list_deleteConfirmation_label=Sće wěsty?
-rooms_list_no_current_conversations=Žane aktualne rozmołwy
 rooms_change_failed_label=Rozmołwa njeda so aktualizować
 rooms_new_room_button_label=Rozmołwu započeć
-rooms_only_occupant_label=Sće prěni tu.
 rooms_panel_title=Wubjerće rozmołwu abo započće nowu
 rooms_room_full_label=Staj hižo dwaj wobdźělnikaj w rozmołwje.
 rooms_room_full_call_to_action_nonFx_label=Sćehńće {{brandShortname}}, zo by swójsku započał
 rooms_room_full_call_to_action_label=Dalše informacije wo {{clientShortname}} »
 rooms_room_joined_label=Něchtó je so rozmołwje přidružił!
-rooms_room_join_label=Telefonowej rozmołwje so přidružić
 rooms_signout_alert=Wočinjene rozmołwy so začinja
 
 # Infobar strings
@@ -333,12 +321,14 @@ infobar_menuitem_dontshowagain_accesskey=H
 
 # Context in conversation strings
 
-# LOCALIZATION NOTE (context_inroom_label): this string is followed by the
-# title/URL of the website you are having a conversation about, displayed on a
+# LOCALIZATION NOTE (context_inroom_header): this string is displayed in the
+# conversation window when the user edits context. It is a header to the edit
+# section.
+# LOCALIZATION NOTE (context_inroom_label2): this string is followed by the
+# title and domain of the website you are having a conversation about, displayed on a
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
-context_inroom_label=Rozmołwjejmy so wo:
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
@@ -346,12 +336,12 @@ context_edit_activate_label=Wo "{{title}}" rěčeć
 context_edit_name_placeholder=Mjeno rozmołwy
 context_edit_comments_placeholder=Komentary
 context_add_some_label=Přidajće trochu konteksta
-context_edit_tooltip=Kontekst wobdźěłać
-context_hide_tooltip=Kontekst schować
 context_show_tooltip=Kontekst pokazać
-context_save_label2=Składować
 context_link_modified=Tutón wotkaz je so změnił.
 context_learn_more_link_label=Dalše informacije.
+conversation_settings_menu_edit_context=Kontekst wobdźěłać
+conversation_settings_menu_hide_context=Kontekst schować
+
 
 # Text chat strings
 
