--- a/hsb/browser/chrome/browser/tabbrowser.properties
+++ b/hsb/browser/chrome/browser/tabbrowser.properties
@@ -31,6 +31,8 @@ tabs.closeButtonMultiple=Rajtarki začinić
 tabs.closeWarningPromptMe=Warnować, hdyž so pospytuje, wjacore rajtarki začinić
 
 tabs.closeTab.tooltip=Rajtark začinić
+# LOCALIZATION NOTE (tabs.closeSelectedTab.tooltip):
+# %S is the keyboard shortcut for closing the current tab
 # LOCALIZATION NOTE (tabs.muteAudio.tooltip):
 # %S is the keyboard shortcut for "Mute tab"
 tabs.muteAudio.tooltip=Němy rajtark (%S)
