--- a/hsb/browser/pdfviewer/viewer.properties
+++ b/hsb/browser/pdfviewer/viewer.properties
@@ -67,7 +67,11 @@ document_properties.title=Dokumentowe kajkosće…
 document_properties_label=Dokumentowe kajkosće…
 document_properties_file_name=Mjeno dataje:
 document_properties_file_size=Wulkosć dataje:
+# LOCALIZATION NOTE (document_properties_kb): "{{size_kb}}" and "{{size_b}}"
+# will be replaced by the PDF file size in kilobytes, respectively in bytes.
 document_properties_kb={{size_kb}} KB ({{size_b}} bajtow)
+# LOCALIZATION NOTE (document_properties_mb): "{{size_mb}}" and "{{size_b}}"
+# will be replaced by the PDF file size in megabytes, respectively in bytes.
 document_properties_mb={{size_mb}} MB ({{size_b}} bajtow)
 document_properties_title=Titul:
 document_properties_author=Awtor:
@@ -75,6 +79,8 @@ document_properties_subject=Předmjet:
 document_properties_keywords=Klučowe słowa:
 document_properties_creation_date=Datum wutworjenja:
 document_properties_modification_date=Datum změny:
+# LOCALIZATION NOTE (document_properties_date_string): "{{date}}" and "{{time}}"
+# will be replaced by the creation/modification date, and time, of the PDF file.
 document_properties_date_string={{date}}, {{time}}
 document_properties_creator=Awtor:
 document_properties_producer=PDF-zhotowjer:
