[kok] update from Pootle (firefox)

--- a/kok/browser/chrome/browser/accounts.properties
+++ b/kok/browser/chrome/browser/accounts.properties
@@ -26,6 +26,8 @@ resendVerificationEmail.accessKey = प
 
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
 
+# LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+
 forgetMigration.label = विसरात
 forgetMigration.accessKey = व
 
@@ -42,6 +44,7 @@ verificationSentTitle = दुजोरो धाडलो
 # LOCALIZATION NOTE (verificationSentHeading) - %S = Email address of user's Firefox Account
 verificationSentHeading = दुजोरो दिवपी जोड हांगा %S धाडली.
 verificationSentDescription = तुमची ईमेल तपासात आणि सिंकिंग चालू करपाक जोडीचेर क्लीक करात.
+# LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
 
 verificationNotSentTitle = दुजोरो धाडपाक शकनात
 verificationNotSentHeading = ह्या वेळार आमी दुजोरो दिवपी मेल धाडपाक शकनात
