--- a/kok/browser/chrome/browser/devtools/markers.properties
+++ b/kok/browser/chrome/browser/devtools/markers.properties
@@ -16,7 +16,7 @@
 # We want to use the same wording as Google Chrome when appropriate.
 marker.label.paint=पेंट
 marker.label.domevent=DOM घडणूक
-marker.label.garbageCollection=इन्क्रिमेंटल जीसी
+marker.label.garbageCollection.incremental=इन्क्रिमेंटल जीसी
 marker.label.unknown=अज्ञात
 
 # LOCALIZATION NOTE (marker.label.javascript.*):
