--- a/kok/services/sync/sync.properties
+++ b/kok/services/sync/sync.properties
@@ -8,6 +8,9 @@ client.name2 = %1$S's %2$S चेर %3$S
 # %S is the date and time at which the last sync successfully completed
 lastSync2.label = निमणे सिंक: %S
 
+# signInToSync.description is the tooltip for the Sync buttons when Sync is
+# not configured.
+
 mobile.label = मोबायल बुकमार्क
 
 remote.pending.label = रीमोट टॅब्ज सिंक जातात...
