--- a/kok/browser/chrome/browser/loop/loop.properties
+++ b/kok/browser/chrome/browser/loop/loop.properties
@@ -19,9 +19,9 @@ clientSuperShortname=हॅलो\u0020
 ## LOCALIZATION_NOTE(sign_in_again_use_as_guest_button2): {{clientSuperShortname}}
 ## will be replaced by the super short brandname.
 
-## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
-## replaced by the brand name
 first_time_experience_button_label=सुरू करात
+## LOCALIZATION_NOTE(first_time_experience_subheading): Message inviting the
+## user to create his or her first conversation.
 
 invite_header_text=तुमका जुळपाक कोणाक तरी आफयात.
 
@@ -71,25 +71,23 @@ settings_menu_button_tooltip=स्थापितां
 
 ## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
 ## the search field.
-contacts_search_placesholder=सोदात...
+contacts_search_placesholder2=सोदात...
 
-## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## LOCALIZATION NOTE (new_contact_button2): This is the button to open the
 ## new contact sub-panel.
-new_contact_button=नवो संपर्क
-## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
-## These are the placeholders for the fields for entering a new contact. Click
-## the 'New Contact' button to see the fields.
-new_contact_name_placeholder=नाव
-new_contact_email_placeholder=ईमेल
-new_contact_fxos_phone_placeholder=फायरफॉक्स OS फोन
-new_contact_phone_placeholder2=फोन
+## LOCALIZATION NOTE (contact_form_*_placeholder):
+## These are the placeholders for the inputs for entering or editing a contact
+## Click the 'New Contact' button to see the fields.
+contact_form_fxos_phone_placeholder=फायरफॉक्स OS फोन
+contact_form_phone_placeholder2=फोन
 
 contacts_blocked_contacts=आडयल्ले संपर्क
 
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact. Click the 'New Contact'
 ## button to see the fields.
-add_contact_button=संपर्क जोडात
+## LOCALIZATION NOTE(add_contact_title): This is the subtitle of the add contact
+## panel. It is displayed when Add Contact is selected.
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
@@ -110,10 +108,16 @@ importing_contacts_progress_button=आयात करता...
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=संपर्क सिंक करात
-## LOCALIZATION NOTE(no_contacts_message_heading): Title shown when user has no
+## LOCALIZATION NOTE(no_contacts_message_heading2): Title shown when user has no
 ## contacts in his address book
-## LOCALIZATION NOTE(no_contacts_import_or_add): Subheading inviting the user
+## LOCALIZATION NOTE(no_contacts_import_or_add2): Subheading inviting the user
 ## to add people to his contact list
+## LOCALIZATION NOTE(no_conversations_message_heading2): Title shown when user
+## has no conversations available.
+## LOCALIZATION NOTE(no_conversations_start_message2): Subheading inviting the
+## user to start a new conversation.
+## LOCALIZATION NOTE(contacts_no_search_results): Message shown when contacts
+## search returned no matching results.
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -156,7 +160,6 @@ edit_contact_email_label=ईमेल
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
-edit_contact_done_button=जाले
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
@@ -168,7 +171,6 @@ video_call_menu_button=व्हिडिओ संभाशण
 
 ## LOCALIZATION NOTE(gravatars_promo_message): The {{learn_more}} part will be
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
-gravatars_promo_button_nothanks=ना, दिनवास
 
 # Conversation Window Strings
 
@@ -184,8 +186,6 @@ hangup_button_title=रावात
 hangup_button_caption2=भायर वचात
 mute_local_audio_button_title=तुमच्या ऑडिओचो आवाज बंद करात
 unmute_local_audio_button_title=तुमच्या ऑडिओचो आवाज बंद करू नाकात
-mute_local_video_button_title=तुमच्या व्हिडिओचो आवाज बंद करात
-unmute_local_video_button_title=तुमच्या व्हिडिओचो आवाज बंद करू नाकात
 
 
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
@@ -216,7 +216,6 @@ restart_call=परत जुळात
 ## when a contact is unavailable. Don't translate the part between {{..}}
 ## because this will be replaced by the contact's name.
 
-generic_failure_title=किदे तरी चुकले
 generic_failure_with_reason2=तुमी मागीर यत्न करपाक शकता वो पावपाची जोड ईमेल करपाक शकता.
 generic_failure_no_reason2=तुमी परत यत्न करपाक सोदता?
 
@@ -266,23 +265,16 @@ tour_label=टूर
 rooms_default_room_name_template=संभाशण {{conversationLabel}}
 rooms_leave_button_label=सोडात
 rooms_list_copy_url_tooltip=जोडीची प्रत करात
-## LOCALIZATION NOTE (rooms_list_current_conversations):
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## We prefer to have no number in the string, but if you need it for your
-## language please use {{num}}.
-rooms_list_current_conversations=सद्याचे संभाशण;सद्याची संभाशणां
+## LOCALIZATION NOTE (rooms_list_recent_conversations): String is in all caps
+## for emphasis reasons, it is a heading. Proceed as appropriate for locale.
 rooms_list_delete_tooltip=संभाशण काडून उडयात\u0020
 rooms_list_deleteConfirmation_label=तुमका खात्री आसा?
-rooms_list_no_current_conversations=सद्याची संभाशणां ना
 rooms_new_room_button_label=संभाशण सुरू करात
-rooms_only_occupant_label=तुमी हांगा पयले.
 rooms_panel_title=संभाशण निवडात वो नवे सुरू करात
 rooms_room_full_label=ह्या संभाशणान पयलीच दोन लोक आसात.
 rooms_room_full_call_to_action_nonFx_label=तुमचे आपले सुरू करपाक {{brandShortname}} डावनलोड करात
 rooms_room_full_call_to_action_label=\u0020{{clientShortname}} » विशीं अदिक शिकात
 rooms_room_joined_label=कोण तरी संभाशणान जुळला!
-rooms_room_join_label=संभाशणान जुळात
 rooms_signout_alert=उक्ती संभाशणां बंद जातली
 
 # Infobar strings
@@ -291,15 +283,18 @@ infobar_button_gotit_label=मेळ्ळे!
 
 # Context in conversation strings
 
-# LOCALIZATION NOTE (context_inroom_label): this string is followed by the
-# title/URL of the website you are having a conversation about, displayed on a
+# LOCALIZATION NOTE (context_inroom_header): this string is displayed in the
+# conversation window when the user edits context. It is a header to the edit
+# section.
+# LOCALIZATION NOTE (context_inroom_label2): this string is followed by the
+# title and domain of the website you are having a conversation about, displayed on a
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
-context_save_label2=जतनाय करात
+
 
 # Text chat strings
 
