[ks] update from Pootle (firefox)

--- a/ks/browser/chrome/browser/accounts.properties
+++ b/ks/browser/chrome/browser/accounts.properties
@@ -26,6 +26,8 @@ resendVerificationEmail.accessKey = د
 
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
 
+# LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+
 forgetMigration.label = مْشید گوو&
 forgetMigration.accessKey = F
 
@@ -42,6 +44,7 @@ verificationSentTitle = تصدیق آیہ سوزنْہ
 # LOCALIZATION NOTE (verificationSentHeading) - %S = Email address of user's Firefox Account
 verificationSentHeading = اس آیہ سوزنْہ اکھ تصدیق لینک %S
 verificationSentDescription = مہربأنی کْرتھ کْریو چک پنُن ایمیل تْہ کْلک کْریو لینک سینکینگ شروع کرنْہ باپت۔
+# LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
 
 verificationNotSentTitle = ہیوک نْہ سوزِتھ تصدیق
 verificationNotSentHeading = وْنکینس ہیکو نْہ أس سوزِتھ اکھ تصدیق ایمیل
