--- a/ks/browser/chrome/browser/devtools/debugger.properties
+++ b/ks/browser/chrome/browser/devtools/debugger.properties
@@ -45,11 +45,14 @@ collapsePanes=پینْہ کْریو کولیپْس
 # that expands the left and right panes in the debugger UI.
 expandPanes=پینْہ پھیلأیو
 
-# LOCALIZATION NOTE (pauseLabel): The label that is displayed on the pause
+# LOCALIZATION NOTE (pauseButtonTooltip): The tooltip that is displayed for the pause
 # button when the debugger is in a running state.
 pauseButtonTooltip=کْلک کْریو پاز کرنْہ باپت (%S)
 
-# LOCALIZATION NOTE (resumeLabel): The label that is displayed on the pause
+# LOCALIZATION NOTE (pausePendingButtonTooltip): The tooltip that is displayed for
+# the pause button after it's been clicked but before the next JavaScript to run.
+
+# LOCALIZATION NOTE (resumeButtonTooltip): The label that is displayed on the pause
 # button when the debugger is in a paused state.
 resumeButtonTooltip=کْلک کْریو ریزیوم  کرنْہ باپت (%S)
 
