--- a/ks/browser/chrome/browser/devtools/markers.properties
+++ b/ks/browser/chrome/browser/devtools/markers.properties
@@ -19,7 +19,7 @@ marker.label.reflow=لے آوٹ
 marker.label.paint=پینٹ
 marker.label.javascript=فنکشن کال
 marker.label.domevent=ڈی او ایم ایوینٹ
-marker.label.garbageCollection=انكریمینٹل جی سی
+marker.label.garbageCollection.incremental=انكریمینٹل جی سی
 marker.label.unknown=نامولوم
 
 # LOCALIZATION NOTE (marker.label.javascript.*):
