--- a/ks/browser/chrome/browser/loop/loop.properties
+++ b/ks/browser/chrome/browser/loop/loop.properties
@@ -21,10 +21,9 @@ contacts_tab_button=کنٹیکٹْہ
 ## LOCALIZATION_NOTE(sign_in_again_use_as_guest_button2): {{clientSuperShortname}}
 ## will be replaced by the super short brandname.
 
-## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
-## replaced by the brand name
-first_time_experience_title={{کلاینٹ شاٹ ناو}}—  گُفتگو کْریو جویِن
 first_time_experience_button_label=شروع  کْریو
+## LOCALIZATION_NOTE(first_time_experience_subheading): Message inviting the
+## user to create his or her first conversation.
 
 invite_header_text=کأنسہ دِیو دعوت توہیہ جویَن کرنْہ باپت۔
 
@@ -74,25 +73,23 @@ settings_menu_button_tooltip=سیٹینگس
 
 ## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
 ## the search field.
-contacts_search_placesholder=ژھانڈ...
+contacts_search_placesholder2=ژھانڈ...
 
-## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## LOCALIZATION NOTE (new_contact_button2): This is the button to open the
 ## new contact sub-panel.
-new_contact_button=نُو کنٹیکٹْہ
-## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
-## These are the placeholders for the fields for entering a new contact. Click
-## the 'New Contact' button to see the fields.
-new_contact_name_placeholder=ناو
-new_contact_email_placeholder=ای میل\u0020
-new_contact_fxos_phone_placeholder=فایر فوکْس او ایس فون
-new_contact_phone_placeholder2=فون
+## LOCALIZATION NOTE (contact_form_*_placeholder):
+## These are the placeholders for the inputs for entering or editing a contact
+## Click the 'New Contact' button to see the fields.
+contact_form_fxos_phone_placeholder=فایر فوکْس او ایس فون
+contact_form_phone_placeholder2=فون
 
 contacts_blocked_contacts=بُلاکْڈ کنٹیکٹْہ
 
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact. Click the 'New Contact'
 ## button to see the fields.
-add_contact_button=کنٹیکٹْہ کْریو جمع
+## LOCALIZATION NOTE(add_contact_title): This is the subtitle of the add contact
+## panel. It is displayed when Add Contact is selected.
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
@@ -115,10 +112,16 @@ import_contacts_success_message=کنٹیکٹْہ آیہ کامیأبی سان 
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=سینک کنٹیکٹْہ
-## LOCALIZATION NOTE(no_contacts_message_heading): Title shown when user has no
+## LOCALIZATION NOTE(no_contacts_message_heading2): Title shown when user has no
 ## contacts in his address book
-## LOCALIZATION NOTE(no_contacts_import_or_add): Subheading inviting the user
+## LOCALIZATION NOTE(no_contacts_import_or_add2): Subheading inviting the user
 ## to add people to his contact list
+## LOCALIZATION NOTE(no_conversations_message_heading2): Title shown when user
+## has no conversations available.
+## LOCALIZATION NOTE(no_conversations_start_message2): Subheading inviting the
+## user to start a new conversation.
+## LOCALIZATION NOTE(contacts_no_search_results): Message shown when contacts
+## search returned no matching results.
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -161,7 +164,6 @@ edit_contact_email_label=ای میل\u0020
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
-edit_contact_done_button=سبدیے
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
@@ -175,8 +177,6 @@ video_call_menu_button=ویڈیو کنورسیشن
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
 gravatars_promo_message=توہیہ ہیکیو آٹومیٹیکلی جمع کْرتھ پروفایل آیکن پننین کنٹیکٹن کُن تِہند ایمیل پتاہ شییر کرنْہ سْیت گریویٹرس سْیت۔{{ہیچھیو_مزید}}۔\u0020
 gravatars_promo_message_learnmore=مزید  ہیچھِو
-gravatars_promo_button_nothanks=نئ شكریا
-gravatars_promo_button_use=پروفایل آیکن کْریو استعمال
 
 # Conversation Window Strings
 
@@ -192,8 +192,6 @@ hangup_button_title=ہینگ اپ کْریو
 hangup_button_caption2=خٲرج کریو
 mute_local_audio_button_title=پنُن آڈیو کْریو میوٹ
 unmute_local_audio_button_title=پنُن آڈیو کْریو ان میوٹ
-mute_local_video_button_title=پنُن   ویڈیو کْریو میوٹ
-unmute_local_video_button_title=پنُن   ویڈیو کْریو ان میوٹ
 active_screenshare_button_title=شییرینگ رُکأیو
 inactive_screenshare_button_title=پنُن سکرین کْریو شییر\u0020
 share_windows_button_title=باقی وینڈو کْریو شییر\u0020
@@ -229,7 +227,6 @@ restart_call=دوبار کْریو جویِن\u0020
 contact_unavailable_title=چُھ غیر دستیاب {{کنٹیکٹْہ ناو}}
 generic_contact_unavailable_title=یہ نفر چُھ غیر دستیاب۔
 
-generic_failure_title=کیاہ تام گو غلط
 generic_failure_with_reason2=توہیہ ہیکیو دوبار کوشش کْرتھ یا ہیکیو ایمیل کْرتھ اکھ لینک یتھ کُن ذن پتْہ وأتِتھ ہیکیو
 generic_failure_no_reason2=کیاہ توہیہ کْرواہ پتْہ پسند دوبار کوشش کرْنئ؟
 
@@ -279,23 +276,16 @@ tour_label=ٹور
 rooms_default_room_name_template=گفتگو {{گفتگو لیبل}}\u0020
 rooms_leave_button_label=ترأیو\u0020
 rooms_list_copy_url_tooltip=لینک کْریو کاپی
-## LOCALIZATION NOTE (rooms_list_current_conversations):
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## We prefer to have no number in the string, but if you need it for your
-## language please use {{num}}.
-rooms_list_current_conversations=موجود گفتگو؛ موجود گفتگو
+## LOCALIZATION NOTE (rooms_list_recent_conversations): String is in all caps
+## for emphasis reasons, it is a heading. Proceed as appropriate for locale.
 rooms_list_delete_tooltip=گفتگو کْریو ڈیلیٹ\u0020
 rooms_list_deleteConfirmation_label=تُہ۪ی چھا یقین
-rooms_list_no_current_conversations=موجود گفتگو نْہ
 rooms_new_room_button_label=اکھ گفتگو کْریو شروع
-rooms_only_occupant_label=توہیہ چھیو ییتنس گوڈنیک۔
 rooms_panel_title=اکھ گفتگو ژأریو یا شروع کْریو اکھ نْو اکھ
 rooms_room_full_label=یتھ گفتگوہس منز چھ گوڈے ذْ نفر۔
 rooms_room_full_call_to_action_nonFx_label=پنُن شروع کرنْہ باپت کْریو ڈاون لوڈ {{برانڈ شاٹ ناو}}\u0020
 rooms_room_full_call_to_action_label=مزید ہیچھیو  {{کْلاینٹ شاٹ ناو}} » مُتلق\u0020
 rooms_room_joined_label=کْم تام چھ  جویِن کْر مْژ  گفتگو!
-rooms_room_join_label=گفتگو کْریو جویِن
 rooms_signout_alert=اوپْن کنورسیشنْہ یِین بند کرنْہ
 
 # Infobar strings
@@ -308,15 +298,18 @@ infobar_menuitem_dontshowagain_accesskey=D
 
 # Context in conversation strings
 
-# LOCALIZATION NOTE (context_inroom_label): this string is followed by the
-# title/URL of the website you are having a conversation about, displayed on a
+# LOCALIZATION NOTE (context_inroom_header): this string is displayed in the
+# conversation window when the user edits context. It is a header to the edit
+# section.
+# LOCALIZATION NOTE (context_inroom_label2): this string is followed by the
+# title and domain of the website you are having a conversation about, displayed on a
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
-context_save_label2=محفوظ تھئویو
+
 
 # Text chat strings
 
