--- a/ks/browser/chrome/browser/tabbrowser.properties
+++ b/ks/browser/chrome/browser/tabbrowser.properties
@@ -30,6 +30,8 @@ tabs.closeWarningMultiple=؛توہیہ چھیو تیار بند کرنس #1 ٹی
 tabs.closeButtonMultiple=ٹیبس كریو بند
 tabs.closeWarningPromptMe=م۪ی كریو آگاہ یل۪ی بئ متعداد ٹیبس بند كرئ
 
+# LOCALIZATION NOTE (tabs.closeSelectedTab.tooltip):
+# %S is the keyboard shortcut for closing the current tab
 # LOCALIZATION NOTE (tabs.muteAudio.tooltip):
 # %S is the keyboard shortcut for "Mute tab"
 # LOCALIZATION NOTE (tabs.unmuteAudio.tooltip):
