--- a/ks/browser/pdfviewer/viewer.properties
+++ b/ks/browser/pdfviewer/viewer.properties
@@ -67,7 +67,11 @@ document_properties.title=دستاویز خصوصیات ۔ ۔ ۔
 document_properties_label=دستاویز خصوصیات ۔ ۔ ۔
 document_properties_file_name=فایل ناو:
 document_properties_file_size=فایل سایِز:
+# LOCALIZATION NOTE (document_properties_kb): "{{size_kb}}" and "{{size_b}}"
+# will be replaced by the PDF file size in kilobytes, respectively in bytes.
 document_properties_kb={{size_kb}} KB ({{size_b}} bytes)
+# LOCALIZATION NOTE (document_properties_mb): "{{size_mb}}" and "{{size_b}}"
+# will be replaced by the PDF file size in megabytes, respectively in bytes.
 document_properties_mb={{size_kb}} KB ({{size_b}} bytes)
 document_properties_title=عنوان:
 document_properties_author=آتھر
@@ -75,6 +79,8 @@ document_properties_subject=موضوع:
 document_properties_keywords=كی وٲرڈ:
 document_properties_creation_date=بناونُک تأریخ
 document_properties_modification_date=تبدیلی ہُند ڈاٹا
+# LOCALIZATION NOTE (document_properties_date_string): "{{date}}" and "{{time}}"
+# will be replaced by the creation/modification date, and time, of the PDF file.
 document_properties_date_string={{تأریخ}}, {{ٹایم}}
 document_properties_creator=بناون وول:
 document_properties_producer=پی ڈی ایف پروڈوسر:
