--- a/ks/dom/chrome/security/security.properties
+++ b/ks/dom/chrome/security/security.properties
@@ -18,7 +18,7 @@ CORSMissingAllowHeaderFromPreflight=\u0020کراس۔آریجن درخواست آ
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security", "HSTS", "max-age" or "includeSubDomains"
 
-# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age" or "includeSubDomains"
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins", "HPKP", "max-age", "report-uri" or "includeSubDomains"
 
 # LOCALIZATION NOTE: Do not translate "SHA-1"
 SHA1Sig=یہ سایٹ چھ استعمال کران اکھ ایس ایچ اے۔۱ سرٹیفیکیٹ؛ صلاح چُھ دِنْہ یوان ذِ توہیہ کْریو استعمال سرٹیفیکیٹ یمن سِگنیچر ایلگاردم آسن یم استعمال کرن ہیش فنکشن یوس مضبوط چُھ ایس ایچ اے۔۱ کھوتْہ۔
@@ -31,7 +31,14 @@ LoadingMixedDisplayContent2=لوڈ کران میکسْڈ(غیر محفوظ) ڈی
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=اکھ آی فریم یتھ منز دوشوے سکریپٹن دِیو اجازت تْہ کونسْی آریجنس دِیو اجازت چُھ امہ کس سینڈ بوکْس ایٹریبیوٹس باپت ہیکہ ہٹأوتھ امِچ سینڈ بوکسینگ۔
 
-# LOCALIZATION NOTE: Do not translate "SSL 3.0".
-WeakProtocolVersionWarning=یہ سایٹ چھ استعمال کران پروٹوکال ایس ایس ایل ۳۔ہ اینکریپشن باپت، یوس ذن ناپسند تْہ غیر محفوظ چُھ۔
+# Sub-Resource Integrity
+# LOCALIZATION NOTE: Do not translate "script" or "integrity". "%1$S" is the invalid token found in the attribute.
+# LOCALIZATION NOTE: Do not translate "integrity"
+# LOCALIZATION NOTE: Do not translate "integrity"
+# LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the type of hash algorigthm in use (e.g. "sha256").
+# LOCALIZATION NOTE: "%1$S" is the URI of the sub-resource that cannot be protected using SRI.
+# LOCALIZATION NOTE: Do not translate "integrity". "%1$S" is the invalid hash algorithm found in the attribute.
+# LOCALIZATION NOTE: Do not translate "integrity"
+
 # LOCALIZATION NOTE: Do not translate "RC4".
 WeakCipherSuiteWarning=یہ سایٹ چھ استعمال کران اکھ صفر آر سی ۴ اینکریپشن باپت، یوس ذن ناپسند تْہ غیر محفوظ چُھ۔
