--- a/ks/browser/chrome/browser/browser.properties
+++ b/ks/browser/chrome/browser/browser.properties
@@ -448,9 +448,6 @@ webapps.doNotUninstall = ان انسٹال مْہ کْریو
 webapps.doNotUninstall.accesskey = D
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
 
-# LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
-fullscreen.entered=%S چھُ پورئ سكرین
-
 # LOCALIZATION NOTE (fullscreenButton.tooltip): %S is the keyboard shortcut for full screen
 fullscreenButton.tooltip=ڈیسپْلے کْریو وینڈو فُل سکرینس(%S)  منز\u0020
 
@@ -518,6 +515,9 @@ getUserMedia.noScreen.label = کانہہ سکرین چُھ نْہ
 getUserMedia.noWindow.label = کانہہ وینڈو چھ نْہ
 getUserMedia.noAudio.label = کانہہ آڈیو چُھ نْہ
 getUserMedia.shareEntireScreen.label = تمام سکرین
+# LOCALIZATION NOTE (getUserMedia.shareMonitor.label):
+# %S is screen number (digits 1, 2, etc)
+# Example: Screen 1, Screen 2,..
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -685,3 +685,4 @@ appmenu.downloadUpdateButton.label = ڈاوُن لوڈ کْریو اپڈیٹ
 # on the pre-release channels. They won't be used in release but they will likely be used in
 # beta starting from version 41, so it's still useful to have these strings properly localized.
 # %S is brandShortName
+
