--- a/ks/services/sync/sync.properties
+++ b/ks/services/sync/sync.properties
@@ -8,6 +8,9 @@ client.name2 = %1$S's %2$S on %3$S
 # %S is the date and time at which the last sync successfully completed
 lastSync2.label = پتم سینك : %S
 
+# signInToSync.description is the tooltip for the Sync buttons when Sync is
+# not configured.
+
 mobile.label = موبایل بُك ماركس
 
 remote.pending.label = ریموٹ ٹیبس چھَ سینك یوان كرنئ
