--- a/ks/toolkit/chrome/global/devtools/gclicommands.properties
+++ b/ks/toolkit/chrome/global/devtools/gclicommands.properties
@@ -95,6 +95,14 @@ screenshotDelayDesc=ژیر (ژیہ)
 # asks for help on what it does.
 screenshotDelayManual=پیارنُك وقت (ژیہن منز) سكرین شاٹ تُلنئ خٲطرئ
 
+# LOCALIZATION NOTE (screenshotDPIDesc) A very short string to describe
+# the 'dpi' parameter to the 'screenshot' command, which is displayed in
+# a dialog when the user is using this command.
+
+# LOCALIZATION NOTE (screenshotDPIManual) A fuller description of the
+# 'dpi' parameter to the 'screenshot' command, displayed when the user
+# asks for help on what it does.
+
 # LOCALIZATION NOTE (screenshotFullscreenDesc) A very short string to describe
 # the 'fullscreen' parameter to the 'screenshot' command, which is displayed in
 # a dialog when the user is using this command.
@@ -1564,6 +1572,8 @@ folderOpenDirResult=اوپن کورُن %1$S\u0020
 # LOCALIZATION NOTE (security)
 # CSP specific
 # LOCALIZATION NOTE: do not translate 'Content-Security-Policy'
+# Referrer Policy specific
+# LOCALIZATION NOTE: %1$S is the current page URI
 
 # LOCALIZATION NOTE (rulersDesc) A very short description of the
 # 'rulers' command. See rulersManual for a fuller description of what
