[mai] update from Pootle (firefox)

--- a/mai/browser/chrome/browser/devtools/markers.properties
+++ b/mai/browser/chrome/browser/devtools/markers.properties
@@ -15,7 +15,7 @@
 # These strings are displayed in the Performance Tool waterfall, identifying markers.
 # We want to use the same wording as Google Chrome when appropriate.
 marker.label.consoleTime=कँसोल :
-marker.label.garbageCollection=संवर्द्धित GC
+marker.label.garbageCollection.incremental=संवर्द्धित GC
 marker.label.unknown=अज्ञात
 
 # LOCALIZATION NOTE (marker.label.javascript.*):
