--- a/mai/browser/chrome/browser/accounts.properties
+++ b/mai/browser/chrome/browser/accounts.properties
@@ -20,6 +20,8 @@ signInAfterUpgradeOnOtherDevice.accessKey = S
 
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
 
+# LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+
 
 
 unlinkVerificationConfirm = कड़ीविहीन करू
@@ -29,4 +31,5 @@ unlinkVerificationConfirm = कड़ीविहीन करू
 verificationSentTitle = सत्यापन भेजल गेल
 # LOCALIZATION NOTE (verificationSentHeading) - %S = Email address of user's Firefox Account
 verificationSentHeading = जाँच कड़ी %S पर भेजल गेल अछि
+# LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
 
