[sah] update from Pootle (firefox)

--- a/sah/browser/chrome/browser/tabbrowser.properties
+++ b/sah/browser/chrome/browser/tabbrowser.properties
@@ -29,6 +29,8 @@ tabs.closeWarningTitle=Сабары бигэргэтии
 tabs.closeButtonMultiple=Кыбытыктары сап
 tabs.closeWarningPromptMe=Хас да кыбытыгы сабаары гыннахха сэрэтээр
 
+# LOCALIZATION NOTE (tabs.closeSelectedTab.tooltip):
+# %S is the keyboard shortcut for closing the current tab
 # LOCALIZATION NOTE (tabs.muteAudio.tooltip):
 # %S is the keyboard shortcut for "Mute tab"
 # LOCALIZATION NOTE (tabs.unmuteAudio.tooltip):
