--- a/sah/browser/chrome/browser/devtools/markers.properties
+++ b/sah/browser/chrome/browser/devtools/markers.properties
@@ -14,7 +14,7 @@
 # LOCALIZATION NOTE (marker.label.*):
 # These strings are displayed in the Performance Tool waterfall, identifying markers.
 # We want to use the same wording as Google Chrome when appropriate.
-marker.label.garbageCollection=Инкрементальнай GC
+marker.label.garbageCollection.incremental=Инкрементальнай GC
 marker.label.unknown=Биллибэт
 
 # LOCALIZATION NOTE (marker.label.javascript.*):
