--- a/sah/services/sync/sync.properties
+++ b/sah/services/sync/sync.properties
@@ -8,6 +8,9 @@ client.name2 = %1$S's - %2$S манна: %3$S
 # %S is the date and time at which the last sync successfully completed
 lastSync2.label = Тиһэх синхроннааһын: %S
 
+# signInToSync.description is the tooltip for the Sync buttons when Sync is
+# not configured.
+
 mobile.label = Мобильнай кыбытык-бэлиэлэр
 
 remote.pending.label = Сотуллубут кыбытыктары синхроннааһын бара турар...
