[son] update from Pootle (firefox)

--- a/son/browser/chrome/browser/browser.properties
+++ b/son/browser/chrome/browser/browser.properties
@@ -495,9 +495,6 @@ webapps.doNotUninstall.accesskey = D
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
 webapps.requestUninstall = War ga boona ka "%1$S" dogu?
 
-# LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
-fullscreen.entered=%S ga cebe dijikul alhaali ra sohõ.
-
 # LOCALIZATION NOTE (fullscreenButton.tooltip): %S is the keyboard shortcut for full screen
 fullscreenButton.tooltip=Zanfunoo cebe dijikul ra (%S)
 
@@ -565,6 +562,9 @@ getUserMedia.noScreen.label = Diji kul šii
 getUserMedia.noWindow.label = Zanfun kul šii
 getUserMedia.noAudio.label = Manti jinde
 getUserMedia.shareEntireScreen.label = Diji timmante
+# LOCALIZATION NOTE (getUserMedia.shareMonitor.label):
+# %S is screen number (digits 1, 2, etc)
+# Example: Screen 1, Screen 2,..
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -754,3 +754,4 @@ e10s.accessibilityNotice.disableAndRestart.label = Kayandi ka tunandi taaga
 e10s.accessibilityNotice.disableAndRestart.accesskey = t
 e10s.accessibilityNotice.dontDisable.label = Ma ši a kayandi
 e10s.accessibilityNotice.dontDisable.accesskey = i
+
