--- a/son/browser/chrome/browser/devtools/markers.properties
+++ b/son/browser/chrome/browser/devtools/markers.properties
@@ -22,7 +22,7 @@ marker.label.parseHTML=HTML fesu-fesu
 marker.label.parseXML=XML fesu-fesu
 marker.label.domevent=DOM batu
 marker.label.consoleTime=Diji-walha:
-marker.label.garbageCollection=Tonton cindi-kurmakaw
+marker.label.garbageCollection.incremental=Tonton cindi-kurmakaw
 marker.label.timestamp=Waati tammaasa
 marker.label.unknown=Šibayante
 
