--- a/son/browser/chrome/browser/tabbrowser.properties
+++ b/son/browser/chrome/browser/tabbrowser.properties
@@ -31,6 +31,8 @@ tabs.closeButtonMultiple=Nor lokey daabu
 tabs.closeWarningPromptMe=Ay yaamar nd'ay ga baa ka nor loku booboyaŋ daabu
 
 tabs.closeTab.tooltip=Nor lokoo daabu
+# LOCALIZATION NOTE (tabs.closeSelectedTab.tooltip):
+# %S is the keyboard shortcut for closing the current tab
 # LOCALIZATION NOTE (tabs.muteAudio.tooltip):
 # %S is the keyboard shortcut for "Mute tab"
 # LOCALIZATION NOTE (tabs.unmuteAudio.tooltip):
