--- a/son/dom/chrome/dom/dom.properties
+++ b/son/dom/chrome/dom/dom.properties
@@ -155,7 +155,7 @@ ImportXULIntoContentWarning=XUL gulley cendi k'i dam gundekuna takadda ra n' ka 
 XMLDocumentLoadPrincipalMismatch=Goyyan nda document.load ši koy nda takaddawey kaŋ hun zanfun taney ra. Zanfun kaŋ ra takaddaa tee hinne ma duu fondo ka .load cee takaddaa ga. Bešere ti, nda war goy nda XMLHttpRequest dogoo ra.\u0020
 # LOCALIZATION NOTE: Do not translate "IndexedDB".
 IndexedDBTransactionAbortNavigation=IndexedDB sanbaray foo kaŋ mana hin ka toonandi jina n' ka kay moo naaruyan sabbu se.
-# LOCALIZATION NOTE: Do not translate Will-change, %1$S,%2$S,%3$S are numbers.
+# LOCALIZATION NOTE: Do not translate Will-change, %1$S,%2$S are numbers.
 # LOCALIZATION NOTE: Do not translate "ServiceWorker".
 HittingMaxWorkersPerDomain=ServiceWorker foo mana hin ka tun, zaa haa kaŋ se, goyey hinnaa kaŋ a ga hin k’i zaa, timme. Sohõda, ServiceWorker tunyanoo goo ma batu hala goyey kaŋ g’a boŋ hinnaa ma timme.
 # LOCALIZATION NOTE: Do no translate "setVelocity", "PannerNode", "AudioListener", "speedOfSound" and "dopplerFactor"
@@ -167,4 +167,6 @@ EmptyWorkerSourceWarning=Goo ma Worker teeyan šii, aššil koonu boŋ. Woo ga h
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "FetchEvent.respondWith()", "FetchEvent.request.type", "same-origin", "cors", "no-cors", "opaque", "Response", or "RequestMode".
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "Error", "Response", "FetchEvent.respondWith()", or "fetch()".
 # LOCALIZATION NOTE: Do not translate "ServiceWorker", "Response", "FetchEvent.respondWith()", or "Response.clone()".
-# LOCALIZATION NOTE: Do not translate "ServiceWorker", "Response", "FetchEvent.respondWith()", "FetchEvent.request", or "Worker".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker", "opaque", "Response", "FetchEvent.respondWith()", "FetchEvent.request", or "Worker".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker", "opaqueredirect", "Response", "FetchEvent.respondWith()", or "FetchEvent.request".
+# LOCALIZATION NOTE: Do not translate "ServiceWorker" or "FetchEvent.preventDefault()".
