--- a/son/services/sync/sync.properties
+++ b/son/services/sync/sync.properties
@@ -8,6 +8,9 @@ client.name2 = %1$S %2$S goo %3$S ga
 # %S is the date and time at which the last sync successfully completed
 lastSync2.label = Hangandiyan koraa: %S
 
+# signInToSync.description is the tooltip for the Sync buttons when Sync is
+# not configured.
+
 mobile.label = Doo-šilbay dirantey
 
 remote.pending.label = Nor loku moorey goo ma hangandi…
