--- a/son/browser/chrome/browser/accounts.properties
+++ b/son/browser/chrome/browser/accounts.properties
@@ -27,6 +27,8 @@ resendVerificationEmail.accessKey = R
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
 reconnectDescription = %S ciya taaga
 
+# LOCALIZATION NOTE (verifyDescription) - %S = Email address of user's Firefox Account
+
 forgetMigration.label = Dirŋa
 forgetMigration.accessKey = D
 
@@ -43,6 +45,7 @@ verificationSentTitle = Tabatandiyan sanbandi
 # LOCALIZATION NOTE (verificationSentHeading) - %S = Email address of user's Firefox Account
 verificationSentHeading = Tabatandiyan dobu sanbandi %S do
 verificationSentDescription = Taare war batagaa guna nda doboo naagu ka šintin ka hangandi.
+# LOCALIZATION NOTE (verificationSentFull) - %S = Email address of user's Firefox Account
 
 verificationNotSentTitle = Mana hin ka tabatandiyan sanba
 verificationNotSentHeading = Ir ši hin ka tabatandiyan bataga sanba sohõda
