--- a/son/browser/chrome/browser/devtools/performance.properties
+++ b/son/browser/chrome/browser/devtools/performance.properties
@@ -87,11 +87,17 @@ category.storage=Jišidoo
 category.events=Damhaya nda teerey
 category.tools=Goyjinawey
 
-# LOCALIZATION NOTE (table.ms):
-# This string is displayed in the call tree after units of time in milliseconds.
+# LOCALIZATION NOTE (table.bytes):
+# This string is displayed in the call tree after bytesize units.
+# %S represents the value in bytes.
 
-# LOCALIZATION NOTE (table.percentage):
+# LOCALIZATION NOTE (table.ms2):
+# This string is displayed in the call tree after units of time in milliseconds.
+# %S represents the value in milliseconds.
+
+# LOCALIZATION NOTE (table.percentage2):
 # This string is displayed in the call tree after units representing percentages.
+# %S represents the value in percentage with two decimal points, localized.
 
 # LOCALIZATION NOTE (table.root):
 # This string is displayed in the call tree for the root node.
@@ -106,15 +112,9 @@ table.idle=(dejje)
 # labels which, when clicked, jump to the debugger.
 table.url.tooltiptext=Ašsil guna hansekaa ra
 
-# LOCALIZATION NOTE (table.zoom.tooltiptext):
-# This string is displayed in the call tree as the tooltip text for the 'zoom'
-# buttons (small magnifying glass icons) which spawn a new tab.
-table.zoom.tooltiptext=Kunga koroši nor loku taaga ra
-
-# LOCALIZATION NOTE (table.view-optimizations.tooltiptext):
+# LOCALIZATION NOTE (table.view-optimizations.tooltiptext2):
 # This string is displayed in the icon displayed next to frames that
 # have optimization data
-table.view-optimizations.tooltiptext=Boryandiyaney guna JIT gunari ra
 
 # LOCALIZATION NOTE (recordingsList.importDialogTitle):
 # This string is displayed as a title for importing a recoring from disk.
