--- a/son/browser/chrome/browser/loop/loop.properties
+++ b/son/browser/chrome/browser/loop/loop.properties
@@ -21,10 +21,9 @@ contacts_tab_button=Borey
 ## LOCALIZATION_NOTE(sign_in_again_use_as_guest_button2): {{clientSuperShortname}}
 ## will be replaced by the super short brandname.
 
-## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
-## replaced by the brand name
-first_time_experience_title={{clientShortname}} — Huru faakaaraa ra
 first_time_experience_button_label=Wa šintin
+## LOCALIZATION_NOTE(first_time_experience_subheading): Message inviting the
+## user to create his or her first conversation.
 
 invite_header_text=Boro foo kanbe ni bande.
 
@@ -74,25 +73,23 @@ settings_menu_button_tooltip=Kayandiyaney
 
 ## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
 ## the search field.
-contacts_search_placesholder=Ceeci…
+contacts_search_placesholder2=Ceeci…
 
-## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## LOCALIZATION NOTE (new_contact_button2): This is the button to open the
 ## new contact sub-panel.
-new_contact_button=Boro taaga
-## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
-## These are the placeholders for the fields for entering a new contact. Click
-## the 'New Contact' button to see the fields.
-new_contact_name_placeholder=Maa
-new_contact_email_placeholder=Bataga
-new_contact_fxos_phone_placeholder=Firefox OS talfon
-new_contact_phone_placeholder2=Talfon
+## LOCALIZATION NOTE (contact_form_*_placeholder):
+## These are the placeholders for the inputs for entering or editing a contact
+## Click the 'New Contact' button to see the fields.
+contact_form_fxos_phone_placeholder=Firefox OS talfon
+contact_form_phone_placeholder2=Talfon
 
 contacts_blocked_contacts=Boro hodantey
 
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact. Click the 'New Contact'
 ## button to see the fields.
-add_contact_button=Boro tonton
+## LOCALIZATION NOTE(add_contact_title): This is the subtitle of the add contact
+## panel. It is displayed when Add Contact is selected.
 ### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
 ### the user enters an invalid email address, preventing the addition of the
 ### contact.
@@ -115,10 +112,16 @@ import_contacts_success_message=Boro {{total}} zaandi ka timme;Boro {{total}} za
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=Borey hangandi
-## LOCALIZATION NOTE(no_contacts_message_heading): Title shown when user has no
+## LOCALIZATION NOTE(no_contacts_message_heading2): Title shown when user has no
 ## contacts in his address book
-## LOCALIZATION NOTE(no_contacts_import_or_add): Subheading inviting the user
+## LOCALIZATION NOTE(no_contacts_import_or_add2): Subheading inviting the user
 ## to add people to his contact list
+## LOCALIZATION NOTE(no_conversations_message_heading2): Title shown when user
+## has no conversations available.
+## LOCALIZATION NOTE(no_conversations_start_message2): Subheading inviting the
+## user to start a new conversation.
+## LOCALIZATION NOTE(contacts_no_search_results): Message shown when contacts
+## search returned no matching results.
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
@@ -161,7 +164,6 @@ edit_contact_email_label=Bataga
 ## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
 ## These button is displayed when the Edit Contact button is selected and is used
 ## to accept the change.
-edit_contact_done_button=Baffoo
 
 ## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
@@ -175,8 +177,6 @@ video_call_menu_button=Widewo faakaaray
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
 gravatars_promo_message=War ga hin ka too alhaali biiyaŋ ma tonton ngi boŋše war borey ga nda ngi bataga aderesey žemna nda Gravatar. {{learn_more}}.
 gravatars_promo_message_learnmore=Bay ka tonton
-gravatars_promo_button_nothanks=Kalaa, a wasa
-gravatars_promo_button_use=Goy nda alhaali biyey
 
 # Conversation Window Strings
 
@@ -192,8 +192,6 @@ hangup_button_title=Talfon wii
 hangup_button_caption2=Fatta
 mute_local_audio_button_title=War jinaa jindoo wii
 unmute_local_audio_button_title=War jinaa jindoo willi
-mute_local_video_button_title=War widewo jindoo wii
-unmute_local_video_button_title=Wra widewo jindoo willi
 active_screenshare_button_title=Fenda žemnayan
 inactive_screenshare_button_title=War dijoo žemna
 share_windows_button_title=Zanfun taney žemna
@@ -229,7 +227,6 @@ restart_call=Willi batoo ra
 contact_unavailable_title={{contactName}} ši duwandi.
 generic_contact_unavailable_title=Boraa woo ši duwandi.
 
-generic_failure_title=Haya foo mana boori.
 generic_failure_with_reason2=War ga hin ka ciya koyne wala dobu sanba bataga ra kaŋ war ga hin ka duwandi.
 generic_failure_no_reason2=War ga boona ka ciya koyne?
 
@@ -279,23 +276,16 @@ tour_label=Windi
 rooms_default_room_name_template=Faakaaray {{conversationLabel}}
 rooms_leave_button_label=Koy
 rooms_list_copy_url_tooltip=Doboo berandi
-## LOCALIZATION NOTE (rooms_list_current_conversations):
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## We prefer to have no number in the string, but if you need it for your
-## language please use {{num}}.
-rooms_list_current_conversations=Sohõda faakaaray;Sohõda faakaarawey
+## LOCALIZATION NOTE (rooms_list_recent_conversations): String is in all caps
+## for emphasis reasons, it is a heading. Proceed as appropriate for locale.
 rooms_list_delete_tooltip=Faakaaraa tuusu
 rooms_list_deleteConfirmation_label=War g''alhakiika?
-rooms_list_no_current_conversations=Faakaaray kul ši sohõda
 rooms_new_room_button_label=Faakaaray šintin
-rooms_only_occupant_label=War ti boro jinaa ne.
 rooms_panel_title=Faakaaray foo suuba wal'itaaga foo šintin
 rooms_room_full_label=Boro hinka ka bara faakaaraa woo ra ka ben.
 rooms_room_full_call_to_action_nonFx_label={{brandShortname}} zumandi ka war wanoo šintin
 rooms_room_full_call_to_action_label=Caw ka tonton {{clientShortname}} » ga
 rooms_room_joined_label=Boro kaa war do faakaaraa ra!
-rooms_room_join_label=Huru faakaaraa ra
 rooms_signout_alert=Faakaaray feerantey ga kaa ka daaba
 
 # Infobar strings
@@ -308,15 +298,18 @@ infobar_menuitem_dontshowagain_accesskey=D
 
 # Context in conversation strings
 
-# LOCALIZATION NOTE (context_inroom_label): this string is followed by the
-# title/URL of the website you are having a conversation about, displayed on a
+# LOCALIZATION NOTE (context_inroom_header): this string is displayed in the
+# conversation window when the user edits context. It is a header to the edit
+# section.
+# LOCALIZATION NOTE (context_inroom_label2): this string is followed by the
+# title and domain of the website you are having a conversation about, displayed on a
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
-context_save_label2=Gaabu
+
 
 # Text chat strings
 
